--- a/learn-certs-pr/courses/20339-1.yml
+++ b/learn-certs-pr/courses/20339-1.yml
@@ -47,16 +47,16 @@ summary: |-
   - IT-Experten sein die Multi-Server Einrichtungen von SharePoint 2016 planen, ausführen und erhalten
   - Arbeitswissen und am besten -Erfahrung mit SharePoint Online haben.
   - Weite Vertrautheit mit SharePoint Arbeitsweisen besitzen.
-  - Erfahrung mit betrieblichem Kontinuitätsmanagement inklusive Datenbackup, Wiederaufbereitung und Hoher Verfügbarkeit besitzen.
+  - Erfahrung mit betrieblichem Kontinuitätsmanagement inklusive Daten-Backups, Wiedererstellung und hoher Verfügbarkeit vorweisen können.
   - Erfahrung mit Authentifizierung und Sicherheitstechnologien haben.
   - Erfahrung mit Windows PowerShell haben.
 
   *Praktische Erfahrung oder Arbeitserfahrung sollte aus einer lösungsbasierten Rolle stammen, in der der Kandidat an mehreren Lösungen im SharePoint-Bereich gearbeitet hat, zu denen Dokumentenmanagement, Content Management und Suche gehören.
 prerequisitesSection: |-
   Vor Teilnahme an diesem Kurs, Benötigen die Teilnehmer Kenntnis über&#58;
-  - Software Management in einem Windows Server 2012 oder Windows Server 2012 R2 Enterprise Server Environment.
-  - Anwendungen nnativ, virtuell und in der Cloud einrichten und verwalten.
-  - IIS Verwaltung.
+  - Software Management in einem Windows Server 2012 oder Windows Server 2012 R2 Enterprise Server Environment
+  - Anwendungen nnativ, virtuell und in der Cloud einrichten und verwalten
+  - IIS Verwaltung
   - Konfiguration von AD/DS für Authentofozierung, Autorisation und als Benutzerdatenbank.
   - Verwaltung einer fernbedienten Anwendung durch Windwows PowerShell 4.0.
   - Verwaltung von Datenbanken und Server Rollen im SQL Server.
@@ -172,12 +172,12 @@ outlineSection: |-
   - Websitesammlungen erstellen und konfigurieren
 
 
-  #### Labor &#58; web applications erstellen und konfigurieren
+  #### Labor&#58; web applications erstellen und konfigurieren
   - Erstellen einer Webanwendung
   - Konfiguration einer Webanwendung
 
 
-  #### Labor &#58; Websites erstellen und konfigurieren
+  #### Labor&#58; Erstellen und Konfigurieren von Websitesammlungen
   - Erstellen und Konfigurieren von Websitesammlungen
   - Websitesammlungen in neuen Content-Datenbanken erstellen
   - Fast-Site- Collection Erstellung benutzen
@@ -227,8 +227,8 @@ outlineSection: |-
   - Anonymen Zugriff auf eine Seite ermöglichen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - User und Berechtigungen in SharePoint 2016 verwalten.
-  - Zugriffsverwaltung auf Inhalte in SharePoint 2016.
+  - User und Berechtigungen in SharePoint 2016 verwalten
+  - Zugriffsverwaltung auf Inhalte in SharePoint 2016
 
 
   ### Modul 9&#58; Authentifizierung in SharePoint 2016 konfigurieren
@@ -246,9 +246,9 @@ outlineSection: |-
   - Konfiguration einer Web Application um AD FS als Identitätsprovider zu nutzen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die Autentifizierungs Infrastruktur von SharePoint 2016 erklären.
-  - Konfiguration von Anspruchsanbietern und Identity Federation für SharePoint 2016.
-  - Server-to-Server Autentifizierung für SharePoint 2016 konfigurieren.
+  - Die Autentifizierungs Infrastruktur von SharePoint 2016 erklären
+  - Konfiguration von Anspruchsanbietern und Identity Federation für SharePoint 2016
+  - Server-to-Server Autentifizierung für SharePoint 2016 konfigurieren
 
 
   ### Modul 10&#58; Sicherung von SharePoint 2016
@@ -266,8 +266,8 @@ outlineSection: |-
   - Sicherheit Auditing implementieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - SharePoint 2016 Auf Platformebene sichern.
-  - Farm-Level Sicherheitseinstellungen für SharePoint 2016 konfigurieren.
+  - SharePoint 2016 Auf Platformebene sichern
+  - Farm-Level Sicherheitseinstellungen für SharePoint 2016 konfigurieren
 
 
   ### Modul 11&#58; Taxonomie verwalten
@@ -289,9 +289,9 @@ outlineSection: |-
   - Ausdruckssätze nutzen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Inhaltstypen und Inhaltstyp Verbreitung erstellen und verwalten.
+  - Inhaltstypen und Inhaltstyp Verbreitung erstellen und verwalten
   - erklären, wie managed Metadata in SharePoint Web applications und Websitesammlungen implementiert werden.
-  - Managed Metadata Serviceanwendungen in SharePoint 2016 verwalten.
+  - Managed Metadata Serviceanwendungen in SharePoint 2016 verwalten
 
 
   ### Modul 12&#58; Konfiguration von Nutzerprofilen
@@ -311,8 +311,8 @@ outlineSection: |-
   - Zielgruppen konfigurieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Nutzerprofil Serviceanwendungen konfigurieren.
-  - Nutzerprofile und Zielgruppen verwalten.
+  - Nutzerprofil Serviceanwendungen konfigurieren
+  - Nutzerprofile und Zielgruppen verwalten
 
 
   ### Modul 13&#58; Unternehmenssuche konfigurieren
@@ -338,9 +338,9 @@ outlineSection: |-
   - Anfragerechtautokorrektur verwalten
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Such Serviceanwendungsarchitektur in SharePoint 2016 beschreiben.
-  - Such Serviceanwendung in SharePoint 2016 konfigurieren.
-  - Sucherfahrung in SharePoint 2016 verwalten.
+  - Such Serviceanwendungsarchitektur in SharePoint 2016 beschreiben
+  - Such Serviceanwendung in SharePoint 2016 konfigurieren
+  - Sucherfahrung in SharePoint 2016 verwalten
 
 
   ### Modul 14&#58; SharePoint 2016 Umgebung überwachen und erhalten
@@ -349,7 +349,7 @@ outlineSection: |-
   - Überwachen einer SharePoint 2016 Umgebung
   - Optimierung und Verbesserung einer SharePoint 2016 Umgebung
   - Planung und Konfiguration von Caching
-  - Fehlersuche in einer SharePoint 2016-Umgebung
+  - Fehlersuche in einer SharePoint 2016 Umgebung
 
 
   #### Labor&#58; SharePoint 2016 Überwachung
@@ -364,8 +364,8 @@ outlineSection: |-
   - SharePoint Seitenleistung analysieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Überwachungspläne für die SharePoint 2016 Umgebung entwickeln und implementieren.
+  - Überwachungspläne für die SharePoint 2016 Umgebung entwickeln und implementieren
   - SharePoint 2016Server-Farmen auf laufender Basis Verbessern und optimieren.
   - Caching planen und konfigurieren und die Leistung von sharePoint 2016 verbessern.
   
-  Fehlerbehebung und Probleme in SharePoint 2016 lösen
+  - Fehlerbehebung und Probleme in SharePoint 2016 lösen
