--- a/learn-certs-pr/courses/20339-2.yml
+++ b/learn-certs-pr/courses/20339-2.yml
@@ -8,18 +8,18 @@ courseNumber: '20339-2-A'
 hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Die Kernarchitektur von SharePoint 2016 und dessen neue verbesserte Features beschreiben.
-- skill: Schlüsselhybridfeatures in SharePoint 2016 beschreiben.
-- skill: SharePoint 2016 Umfeld planen und entwerfen um Anforderungen für Hohe Verfügbarkeit und Disaste Recovery zu erfüllen.
-- skill: BetriebsKonnektivitäts Service und Secure Store Service planen und implementieren.
-- skill: Produktivitäts Services für SharePoint 2016 Einführung konfigurieren und verwalten.
-- skill: Verwalten von Lösungen in einer SharePoint 2016 Einführung.
-- skill: Planen und Konfigurieren der sozialen Zusammenarbeitsfunktionen.
-- skill: Webcontentmanagement für Internet Umgebungen planen und konfigurieren.
-- skill: Enterpreise Content Management in SharePoint 2016 planen und konfigurieren.
-- skill: Business Intelligence Lösungen planen und konfigurieren.
-- skill: Arbeitsmanagement, produktivität und Zusammenarbeitsplattformen und Funktionen planen und konfigurieren.
-- skill: Upgrade oder Migraton zu SharePoint 2016 durchführen.
+- skill: Die Kernarchitektur von SharePoint 2016 und dessen neue verbesserte Features beschreiben
+- skill: Schlüsselhybridfeatures in SharePoint 2016 beschreiben
+- skill: SharePoint 2016 Umfeld planen und entwerfen um Anforderungen für Hohe Verfügbarkeit und Disaste Recovery zu erfüllen
+- skill: BetriebsKonnektivitäts Service und Secure Store Service planen und implementieren
+- skill: Produktivitäts Services für SharePoint 2016 Einführung konfigurieren und verwalten
+- skill: Verwalten von Lösungen in einer SharePoint 2016 Einführung
+- skill: Planen und Konfigurieren der sozialen Zusammenarbeitsfunktionen
+- skill: Webcontentmanagement für Internet Umgebungen planen und konfigurieren
+- skill: Enterpreise Content Management in SharePoint 2016 planen und konfigurieren
+- skill: Business Intelligence Lösungen planen und konfigurieren
+- skill: Arbeitsmanagement, produktivität und Zusammenarbeitsplattformen und Funktionen planen und konfigurieren
+- skill: Upgrade oder Migraton zu SharePoint 2016 durchführen
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -32,7 +32,7 @@ products:
 exams:
 - uid: exam.70-339
 summary: |-
-  Dieser fünftägige Kurs lehrt die Planung, Konfiguration und Verwaltung der forgeschrittenen Funktionen der SharePoint 2016 Umgebung. Der Kurs konzentriert sich hauptsächlich darauf, Hochverfügbarkeit zu implementieren, Disaster Recovery, Serviceanwendungsarchitektut und Microsoft Business Connectivity Services. Der Kurs behandelt auch Social Computing Funktionen, Produktivität und Zusammenarbeitsplattformen und Funktionen. Teilnehmer lernen etwas über Business Intelligence Lösungen, Enterprise Content Management, Web Content Management Infrastruktur, Lösungen und Apps. Dieser Kurs behandelt auch die Entwicklung und Implementierung eines Governance-Plans sowie die Durchführung eines Upgrades oder einer Migration auf SharePoint 2016.
+  Dieser fünftägige Kurs lehrt die Planung, Konfiguration und Verwaltung der forgeschrittenen Funktionen der SharePoint 2016 Umgebung. Der Kurs konzentriert sich hauptsächlich darauf, Hochverfügbarkeit zu implementieren, Disaster Recovery, Serviceanwendungsarchitektut und Microsoft Business Connectivity Services. Der Kurs behandelt auch Social Computing Funktionen, Produktivität und Zusammenarbeitsplattformen und Funktionen. Teilnehmer lernen etwas über Business Intelligence Lösungen, Enterprise Content Management, Web Content Management Infrastruktur, Lösungen und Apps. Der Kurs behandelt außerdem die Planung von Governance in SharePoint 2016 und wie man eine Upgrade oder eine Migration zu SharePoint 2016 durchführt.
   
   Es ist der zweite von zwei Kursen für IT-Experten und steht in zusammenhang mit der SharePoint 2016 IT Pro Zertifizierunt.
 
@@ -45,7 +45,7 @@ summary: |-
   
   - Berufserfahrung und, bestenfalls praktische Erfahrung mit Microsoft SharePoint Online haben.
   - Breite Vertrautheit mit, und bevorzugt praktische Erfahrung, mit Microsoft SharePoint Online haben.
-  - Erfahrung mit betrieblichem Kontinuitätsmanagement inklusive Datenbackup, Wiederaufbereitung und Hoher Verfügbarkeit besitzen.
+  - Erfahrung mit betrieblichem Kontinuitätsmanagement inklusive Daten-Backups, Wiedererstellung und hoher Verfügbarkeit vorweisen können.
   - Erfahrung mit Authentifizierung und Sicherheitstechnologien haben.
   - Erfahrung mit Windows PowerShell haben.
   
@@ -79,9 +79,9 @@ outlineSection: |-
   - Serviceanwendungen durch die Nutzung der SharePoint 2016 Management Shell bereitstellen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die Architekturfunktionen von Microsoft SharePoint 2016 beschreiben.
-  - Neue, veraltete und entferne Funktionen in SharePoint 2016 identifizieren.
-  - Editionen für SharePoint 2016 Und Microsoft SharePoint Online beschreiben.
+  - Die Architekturfunktionen von Microsoft SharePoint 2016 beschreiben
+  - Neue, veraltete und entferne Funktionen in SharePoint 2016 identifizieren
+  - Editionen für SharePoint 2016 Und Microsoft SharePoint Online beschreiben
 
 
   ### Modul 2&#58; Einführung in hybride Szenarien für SharePoint 2016
@@ -100,8 +100,8 @@ outlineSection: |-
   - SharePoint Hybridauswahl laufen lassen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - die Hybriden Kernfunktionen in SharePoint Server 2016 beschreiben.
-  - Hybride SharePoint 2016 Einrichtung vorbereiten.
+  - die Hybriden Kernfunktionen in SharePoint Server 2016 beschreiben
+  - Hybride SharePoint 2016 Einrichtung vorbereiten
 
 
   ### Modul 3&#58; business continuity management Strategien entwerfen
@@ -140,8 +140,8 @@ outlineSection: |-
   - BDC Modelle importieren und konfigurieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Business Connectivity Service Applikationen planen und konfigurieren.
-  - Secure Store Service Applikationen planen und konfigurieren.
+  - Business Connectivity Service Applikationen planen und konfigurieren
+  - Secure Store Service Applikationen planen und konfigurieren
   - Business Data Connectivity Modelle verwalten.
 
 
@@ -159,9 +159,9 @@ outlineSection: |-
   - Monitoring Apps Einsetzen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Microsoft SharePoint Add-ins und unterstützende SharePoint Infrastruktur beschreiben.
-  - SharePoint Add-ins und App Kataloge bereitstellen und konfigurieren.
-  - Verwalten, wie Apps in der SharePoint 2016 Anwendung genutzt werden.
+  - Microsoft SharePoint Add-ins und unterstützende SharePoint Infrastruktur beschreiben
+  - SharePoint Add-ins und App Kataloge bereitstellen und konfigurieren
+  - Verwalten, wie Apps in der SharePoint 2016 Anwendung genutzt werden
 
 
   ### Modul 6&#58; Lösungen in  Microsoft SharePoint 2016 verwalten
@@ -177,8 +177,8 @@ outlineSection: |-
   - Farm-Lösungen bereitstellen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Funktionen und Lösungen in SharePoint 2016 verwalten.
-  - Sandkastenlösungen in SharePoint 2016 verwalten.
+  - Funktionen und Lösungen in SharePoint 2016
+  - Sandkastenlösungen in SharePoint 2016 verwalten
 
 
   ### Modul 7&#58; Menschen verbinden
@@ -225,10 +225,10 @@ outlineSection: |-
   - Konfigurieren der Gerätekanäle
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Web Content Management Infrastruktur planen und konfigurieren.
-  - Managed Navigation und Produktkatalogseiten konfigurieren.
+  - Web Content Management Infrastruktur planen und konfigurieren
+  - Managed Navigation und Produktkatalogseiten konfigurieren
   - Unterstützung für Multilinguale Seiten planen und konfigurieren.
-  - Design und Anpassung für Veröffentlichungsseiten verwalten.
+  - Design und Anpassung für Veröffentlichungsseiten verwalten
   - Unterstützung für mobile Nutzer planen und konfigurieren.
 
 
@@ -250,9 +250,9 @@ outlineSection: |-
   - in-place Datenverwaltung konfigurieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Planen, wie Content und Dokumente verwaltet werden.
-  - EDiscovery konfigurieren und planen.
-  - Datensatzverwaltung und Übereinstimmung planen.
+  - Planen, wie Content und Dokumente verwaltet werden
+  - EDiscovery konfigurieren und planen
+  - Datensatzverwaltung und Übereinstimmung planen
 
 
   ### Modul 10&#58; Planung und Konfiguration von business intelligence Lösungen
@@ -297,10 +297,10 @@ outlineSection: |-
   - Workflow erstellen und testen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Erklären, wie SharePoint Kollaboration und Coauthor Optionen geplant und konfiguriert werden.
-  - Projektseiten und Teams konfigurieren.
-  - Composites planen und konfigurieren.
-  - Workflows in SharePoint 2016 konfigurieren.
+  - Erklären, wie SharePoint Kollaboration und Coauthor Optionen geplant und konfiguriert werden
+  - Projektseiten und Teams konfigurieren
+  - Composites planen und konfigurieren
+  - Workflows in SharePoint 2016 konfigurieren
 
 
   ### Modul 12&#58; Upgrade und Migration auf SharePoint 2016
@@ -312,11 +312,11 @@ outlineSection: |-
 
 
   #### Labor&#58; Content Datenbank Migration und Upgrade vom Microsoft SharePoint Server 2013 ausführen
-  - SharePoint Server 2013 Managed Metadata Service Migration
-  - SharePoint Server 2013 Content Datenbank Upgrade
+  - SharePoint Server 2013&#58; Managed Metadata Service Migration
+  - SharePoint Server 2013&#58; Content Datenbank Upgrade
 
 
-  #### Labor &#58; Site Sammlung Upgrades verwalten
+  #### Labor&#58; Site Sammlung Upgrades verwalten
   - Site Sammlungen auf das Upgrade vorbereiten
   - Site Sammlungen Upgraden
 
