--- a/learn-certs-pr/courses/40409.yml
+++ b/learn-certs-pr/courses/40409.yml
@@ -9,7 +9,7 @@ hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Die verschiedenen Voice Workloads die für Skype for Business Online und Skype for Business Server 2015 verfügbar sind beschreiben.
-- skill: Bewertung eines Netzwerks in Vorbereitung für einen Skype for Business Server 2016 oder Skype for Business Online Voice Lösung.
+- skill: Bewertung eines Netzwerks in Vorbereitung für einen Skype for Business Server 2015 oder Skype for Business Online Voice Lösung.
 - skill: Bereitstellung und Konfiguration einer Skype for Business Voice Lösung die Skype for Business Online und Skype for Business Enterprise Voice kombiniert.
 - skill: Cloud PBX mit PSTN Callnig bereitstellen und konfigurieren
 - skill: On-Premise Enterprise Voice Funktionalität konfigurieren.
@@ -59,7 +59,7 @@ outlineSection: |-
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Die verschiedenen verfügbaren Optionen aus vielen verschiedenen möglichen Voice Architekturen mt Skype for Business Server 2015 und Skype for Business Online beschreiben.
   - Erklären, wie Cloud Technologien Design, Bereitstellung und Verwaltung von Voice Architekturen verändern.
-  - Vorausgehende Erfahrung mit dem Erlernten Wissen aus dem Kurs in Zusammenhang bringen.
+  - Vorausgehende Erfahrung mit dem Erlernten Wissen aus dem Kurs in Zusammenhang bringen
 
 
   ### Modul 2&#58; Netzwerk und Voice Bereitstellungsoptionen bewerten
@@ -77,10 +77,10 @@ outlineSection: |-
   - Single Sign-On mit Office 365 ermöglichen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die phasen der Netzwerkbewertung beschreiben.
-  - Skype for Business Online Päne identifizieren.
-  - die unterstüzten Voice Architekturen beschreiben.
-  - Eine Voice Architektur für ein gegebenes Szenario auswählen.
+  - Die phasen der Netzwerkbewertung beschreiben
+  - Skype for Business Online Päne identifizieren
+  - die unterstüzten Voice Architekturen beschreiben
+  - Eine Voice Architektur für ein gegebenes Szenario auswählen
 
 
   ### Modul 3&#58; Split Domain Konfiguration
@@ -142,11 +142,11 @@ outlineSection: |-
   - Den London Dial Plan konfigurieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Skype for Business Enterprise Voice Entwerfen und implementieren.
+  - Skype for Business Enterprise Voice Entwerfen und implementieren
   - Enterprise Voice Einstellungen, inklusive Dial Plänen, Voice Richtlinien, PSTN Nutzung, Voice Routen, Trunks und nummerierten Plänen für DID und Erweiterungen konfigurieren.
-  - Skype for Business Voice Routing beschreiben.
-  - Exchange Unified Messaging mit Skype for Business Server 2015 integrieren.
-  - Skype for Business Client Voice Funktionen konfigurieren.
+  - Skype for Business Voice Routing beschreiben
+  - Exchange Unified Messaging mit Skype for Business Server 2015 integrieren
+  - Skype for Business Client Voice Funktionen konfigurieren
 
 
   ### Modul 6&#58; PSTN Konnektivität
@@ -170,12 +170,12 @@ outlineSection: |-
   - IP-PBX Integrationseinstellungen konfigurieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Mediation Server Rolle planen.
-  - Skype for Business Server 2015 zum PSTN verbinden.
-  - Interworking Routing M&#58;N implementieren.
-  - eine verlässliche Route für Anrufe über PSTN definieren.
-  - Call via Work beschrieben.
-  - Shared Line Erscheinungen beschreiben.
+  - Mediation Server Rolle planen
+  - Skype for Business Server 2015 zum PSTN verbinden
+  - Interworking Routing M&#58;N implementieren
+  - eine verlässliche Route für Anrufe über PSTN definieren
+  - Call via Work beschrieben
+  - Shared Line Erscheinungen beschreiben
 
 
   ### Modul 7&#58; Cloud PBX mit On-Premises PSTN Konnektivität durch bestehende Bereitstellung
@@ -216,8 +216,8 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - verstehen, wann Cloud Connector Edition die richtige Lösung für eine Organisation ist.
-  - Cloud Connector Edition Voraussetzungen identifizieren.
-  - Cloud Connector Edition einrichten und verwalten.
+  - Cloud Connector Edition Voraussetzungen identifizieren
+  - Cloud Connector Edition einrichten und verwalten
 
 
   ### Modul 9&#58; Erweiterte Anruffunktionen und Geräteanforderungen
@@ -246,11 +246,11 @@ outlineSection: |-
   - LIS Funktionen ausprobieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - die verschiedenen Voice Funktionen erklären.
+  - die verschiedenen Voice Funktionen erklären
   - Anruffunktionen, die die Skype for Business Enterprise Voice Funktionalität erweitern, konfigurieren.
-  - Anrufverteilung mit Antwortgruppen konfigurieren.
+  - Anrufverteilung mit Antwortgruppen konfigurieren
   - Gerätestandorte durch Location Information Server sichtbar machen.
-  - Geräte im Skype for Business Server 2015 verwalten.
+  - Geräte im Skype for Business Server 2015 verwalten
 
 
   ### Modul 10&#58; Netzwerkanforderungen
@@ -275,8 +275,8 @@ outlineSection: |-
   - DSCP Werte und Port Ranges für Prioritizing Network Traffic analysieren (Bonusübung)
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die Media Stacks die für Skype for Business Server 2015 und Skype for Business Online verfügbar sind erklären.
-  - Netzwerkverbrauch planen.
+  - Die Media Stacks die für Skype for Business Server 2015 und Skype for Business Online verfügbar sind erklären
+  - Netzwerkverbrauch planen
   - Voice Kommunikation auf einem Netzwerk optimieren.
   - Bandbreitenoptimierungstechnologien wie Call Admission Control (CAC), Quality of Service (QoS) und Softwaredefinierte Netzwerke (SDN) implementieren.
 
@@ -300,7 +300,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Die Call Quality Methodology (CQM) und Überwachungstools einsetzen
-  - Anrufqualität effektiv definieren und aufrechterhalten.
+  - Anrufqualität effektiv definieren und aufrechterhalten
 
 
   ### Modul 12&#58; Voice Fehlerbehebung
@@ -321,12 +321,12 @@ outlineSection: |-
   - Voice Routing Probleme beheben
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Probleme bei der Anrufqualität beheben.
-  - Tools für Fehlerbehebung festlegen.
-  - Szenarien für Fehlerbehebung festlegen.
+  - Probleme bei der Anrufqualität beheben
+  - Tools für Fehlerbehebung festlegen
+  - Szenarien für Fehlerbehebung festlegen
   - Fehlerbehebungsmethodik für Suche, Diagnose und Beseitigung von Probelmen bei der Anrufqualität einsetzen.
-  - häufige Probleme von Skype for Business Online Client beheben.
-  - Fehlerbehebung bei IP Phones.
+  - häufige Probleme von Skype for Business Online Client beheben
+  - Fehlerbehebung bei IP Phones
 
   #### Additional Reading
   Keine
