--- a/learn-certs-pr/courses/ai-100t01.yml
+++ b/learn-certs-pr/courses/ai-100t01.yml
@@ -27,7 +27,7 @@ summary: |-
   Erlangen Sie das benötigte Wissen um Azure AI Lösungen zu entwerfen indem Sie Kundenservice Chat-Bots mit Künstlicher Intelligenz von der Microsoft Azure Plattform inklusive Spracherkennung und vorher errichteter AI Funktionalität in den Azure-cognitive-services, bauen.
 
   #### Zielgruppenprofil
-  Der Kurs ist für Cloud Service Architekten, Designern von Künstlicher Intelligenz in Azure und AI Developer ausgerichtet.
+  Der Kurs ist für Cloud Service Architekten, Designern von Künstlicher Intelligenz in Azure und AI&#58; Developer ausgerichtet.
 prerequisitesSection: |-
   Vor Teilnahme an disesem Kurs benötigen die Teilnehmer&#58;
   - Azure Grundlagen
