--- a/learn-certs-pr/courses/az-120t00.yml
+++ b/learn-certs-pr/courses/az-120t00.yml
@@ -30,9 +30,8 @@ summary: |-
   #### Zielgruppenprofil
   
   Der Kurs ist für Azure Administratoren die SAP Lösungen in Azure migrieren und verwalten Azure Administratoren verwalten die Cloud Services, die Speicherung und Netzwerke überbrücken und Cloudkapazität kalkulieren mit einem tiefgreifenden Verständnis von jedem Dienst im kompletten IT Lebenszyklus. Sie nehmen Erfahrung von End-nutzen für neue Cloudanwendungen entgegen und geben Empfehlungen zur Nutzung von Diensten für eine optimale Leistung und Skalierung sowie zur Bereitstellung, Größe, Überwachung und Anpassung wie benötigt. Diese Rolle erforder Kommunikation und Koordination mit Verkäufern. Azure Administratoren nutzen das Azure Portal und mit zunehmender Erfahrung auch PowerShell und das Command Line Interface.
-  
 prerequisitesSection: |-
-  - Administratoren und Architekten von Azure Lösungen für SAP sollten solides Wissen der SAP Anwendungen, SAP HANA, S/4HANA SAP NetWaver, SAP&#58; BW OS Server für SAP Anwendungen und Datenbanken besitzen.
+  - Administratoren und Architekten von Azure Lösungen für SAP sollten solides Wissen der SAP Anwendungen, SAP HANA, S/4HANA SAP NetWaver, SAP: BW OS Server für SAP Anwendungen und Datenbanken besitzen.
   - Vor der Teilnahme an diesem Kurs wird empfohlen, dass die Teilbehmer den Azure Administrator (AZ-103) oder den Azure Solutions Architect (AZ-300) Kurs sowie SAP HANA und Linux Training absolviert haben.
 outlineSection: |-
   ### Modul 1&#58; Einführung
@@ -45,7 +44,7 @@ outlineSection: |-
 
   ### Modul 3&#58; SAP Certified Offerings für Azure
   
-  Enthält Lektionen über algemeine Voraussetzungen (SAP Unterstützung in öffentlichen Cloud Umgebungen), Einrichtungsoptionen von Azure für SAP Arbeit, SAP Produktivitäts unterstützung für Azure, Betriebssysteme die Azure für SAP Arbeit unterstützen, Speicherunterstützung von Azure für SAP, Netzwerkunterstützung für SAP, Datenbankunterstützung für SAP, Hochverfügbarkeit und Disaster Recovery unterstzützung für SAP und Überwachungsanforderungen für SAP-
+  Enthält Lektionen über algemeine Voraussetzungen ( SAP Unterstützung in öffentlichen Cloud Umgebungen), Einrichtungsoptionen von Azure für SAP Arbeit, SAP Produktivitäts unterstützung für Azure, Betriebssysteme die Azure für SAP Arbeit unterstützen, Speicherunterstützung von Azure für SAP, Netzwerkunterstützung für SAP, Datenbankunterstützung für SAP, Hochverfügbarkeit  und Disaster Recovery unterstzützung für SAP und Überwachungsanforderungen für SAP-
   
   #### Labor&#58; Online Lab&#58; Linux cluster auf Azure Vms implementieren
   
@@ -53,7 +52,7 @@ outlineSection: |-
   
   ### Modul 4&#58; SAP auf Azure Reference Architektur
   
-  Enthält Lektionen über SAP NetWeaver mit AnyDB, SAP S4 HANA auf Azure (Große Entfernung) auf Azure VMs
+  Enthält Lektionen über SAP NetWeaver mit AnyDB, SAP S4&#58; HANA auf Azure (Große Entfernung) auf Azure VMs
 
   ### Modul 5&#58; Implementation von SAP Lösungen auf Azure planen
     
