--- a/learn-certs-pr/courses/az-203t02.yml
+++ b/learn-certs-pr/courses/az-203t02.yml
@@ -31,11 +31,11 @@ summary: |-
   In diesem Kurs erlangen die Teilnehmer das Wissen und die benötigten Fähigkeiten um AzurePlatform als Service Funktion und Dienste in der Entwicklungslösung zu implementieren. Teilnehmer lernen wie Azure App Service Resourcen erstellt und verwaltet werden, wie push und offline sync in den mobilen Apps integriert wird und wie API dokumentiert wird. Die Teilnehmer lernen außerdem wie Azure-functions erstellt und getestet wird.
 
   #### Zielgruppenprofil
-  - Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
+  Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
 prerequisitesSection: |-
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
-  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt.
+  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt
 outlineSection: |-
   ### Modul 1&#58; App Service web apps erstellen
   Azure App Service Wepp Apps (oder einfach Web Apps) ist ein Dienst für Hosting Web Apps, REST APIs und mobile Backends. Web Apps fügt die Kraft von Microsoft Azure zu Ihrer Anwendung durch security, Load Balancing, Autoscaling und automated management hinzu.
