--- a/learn-certs-pr/courses/az-203t03.yml
+++ b/learn-certs-pr/courses/az-203t03.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Entwickeln Sie für Azure Storage
+title: Entwickeln für Azure Storage
 metadata:
   title: 'Kurs AZ-203T03-A: Entwickeln für Azure Storage'
   description: 'Kurs AZ-203T03-A: Entwickeln für Azure Storage'
@@ -31,10 +31,10 @@ summary: |-
   In diesem Kurs erlangen die Teilnemer das Wissen und die benötigten Fähigkeiten, um Azure-storage services und Funktionen in ihrer Entwicklungslösung einzusetzen. Es erklärt Azure Table storage, Azure Cosmos DB, Azure Blob und Entwicklung gegen rationale Datenbanken in Azure.
 
   #### Zielgruppenprofil
-  - Teilnehmer des Kurses sind an der Azure entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
+  Teilnehmer des Kurses sind an der Azure entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
 prerequisitesSection: |-
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
-  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt.
+  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt
 outlineSection: |-
   ### Modul 1&#58; Lösungen, die Azure Table storage nutzen, entwickeln
   Azure Table storage ist ein Service der strukturierte NoSQL Daten in der Cloud speichert und Key/attribute Speicher mit schemalosem design bietet. Da Table Storage schemalos ist, kann es leicht an Ihre Daten angepasst werden, wie gerade für die Verbesserung Ihrer Anwendung benötigt.
