--- a/learn-certs-pr/courses/az-203t05.yml
+++ b/learn-certs-pr/courses/az-203t05.yml
@@ -31,14 +31,14 @@ summary: |-
   In diesem Kurs erlangen die Studenten das Wissen und die benötigten Fähigkeiten um sicher zu stellen, das Anwendungen in Azure effizient und wie gewollt ausgeführt werden. Teilnehmer lernen, wie Azure Monitor arbeitet und wie Werkzeuge wie Log Analytics und Application Insights genutzt werden um zu verstehen, was in ihrer Anwendung passiert. Die Teilnehmer werden außerdem lernen, wie Autoscale implementiert wird, ihre Lösungen instrumentiert werden um Monitoring und Logging zu unterstützen und Azure Cache und CDN Optionen zu nutzen, um die Endnutzer Erfahrung zu verbessern.
 
   #### Zielgruppenprofil
-  - Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
+  Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
 prerequisitesSection: |-
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
-  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt.
+  - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt
 outlineSection: |-
   ### Modul 1&#58; Einführung in Azure Monitor
-  Azure Monitor ist ein zentraler Dienst, der alle Werkzeuge die für die Überwachungt und optimierung einer Lösung benötigt werden, beinhaltet.
+  Azure Monitor ist ein zentraler Dienst, der alle Werkzeuge die für die Überwachungt und optimierung einer Lösung  benötigt werden, beinhaltet.
   #### Lektionen
   - Überblick über Azure Monitor
 
@@ -67,7 +67,7 @@ outlineSection: |-
   - Analyse und Fehlerbehebung von Lösungen mit Hilfe von Azure Monitor
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Default Code zu Web Pages, Console Apps und Windows Desktop Anwendungen um telemetrie zu unterstützen, hinzufügen
+  - Default Code zu Web Pages, Console Apps und Windows Desktop Anwendungen um telemetrie zu unterstützen, hinzufügen.
   - Dashboards und andere Tools nutzen um eine App zu Überwachen und Fehler zu beheben
 
 
