--- a/learn-certs-pr/courses/az-203t06.yml
+++ b/learn-certs-pr/courses/az-203t06.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Verbindung zu Azure-Diensten und Diensten von Drittanbietern herstellen und nutzen
+title: Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen
 metadata:
-  title: 'Kurs AZ-203T06-A: Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen'
-  description: 'Kurs AZ-203T06-A: Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen'
+  title: 'Kurs AZ-203T06-A: - Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen'
+  description: 'Kurs AZ-203T06-A: - Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen'
 uid: course.az-203t06
 courseNumber: 'AZ-203T06-A'
 hoursToComplete: 24
@@ -31,7 +31,7 @@ summary: |-
   Dieser Kurs handelt von Kommunikation zwischen Apps und Diensten Teilnehmer lernen, wie verschiedene Event- und Message-basierten Dienste in Azure innerhalb ihrer Entwicklungslösung verwendet werden können. Im Laufe des Kurses werden die Teilnehmer lernen, wie diese Resourcen mithilfe des Azure Portals, Azure CLI REST und Application Code erstellt und integriert werden.
 
   #### Zielgruppenprofil
-  - Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
+  Teilnehmer des Kurses sind an der Azure Entwicklung oder dem Bestehen der Microsoft Azure Entwickler-Mitarbeiter Zertifizierungsprüfungen interessiert.
   - Teilnehmer sollten 1-2 Jahre Erfahrung als Entwickler haben Der Kurs geht davon aus, dass die Teilnehmer das Kodieren beherrschen und ein fundamentales Wissen über Azure besitzen.
   - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt
 prerequisitesSection: |-
@@ -40,10 +40,11 @@ prerequisitesSection: |-
   Von Azure besitzen.
   - Es wird empfohlen, dass die Teilnehmer Erfahrung mit
   PowerShell oder Azure CLI Arbeit im Azure Portal und mit mindestens
-  Einer Azure-gestützten Programmiersprache haben. Die Meisten Beispiele in diesem Kurs werden in C# NET präsentiert.
+  Einer Azure-gestützten Programmiersprache haben. Die Meisten Beispiele in diesem
+  Kurs werden in C# NET präsentiert
 outlineSection: |-
   ### Modul 1&#58; Entwickeln einer App Service Logic App.
-  Logic Apps hilft Ihnen Lösungen zu erstellen die Apps, Daten, Systeme und Dienste im gesamten Unternehmen oder einer Organisation durch die Automatisierung von Aufgaben und Betriebsprozessen als Workflows integrieren. Dieses Modul erklärt, was sie sind und wie man sie erstellt.
+  Logic Apps hilft Ihnen Lösungen zu erstellen die Apps, Daten, Systeme und Dienste im gesamten Unternehmen oder einer Organisation durch die Automatisierung von Aufgaben und Betriebsprozessen als Workflows  integrieren. Dieses Modul erklärt, was sie sind und wie man sie erstellt.
   #### Lektionen
   - Überblick über Azure Logic Apps
   - Logic Apps über Visual Studio erstellen
