--- a/learn-certs-pr/courses/az-300t03.yml
+++ b/learn-certs-pr/courses/az-300t03.yml
@@ -11,7 +11,7 @@ skillsGained:
 - skill: Design und Verbindungsmuster
 - skill: Hybrid Networking
 - skill: Dauerhaftigkeit der Daten ansprechen
-- skill: Throughput und Struktur von Datenzugriff messen
+- skill: Throughput und Struktur des Datenzugriffs messen
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -75,5 +75,5 @@ outlineSection: |-
   Das Modul beinhaltet die folgenden Themen&#58; DTUs – Azure SQL Database; RUs – Azure Cosmos DB; strukturierte und unstrukturierte Daten; Und verwendung strukturierter Datenbanken
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Dauerhaftigkeit der Daten und caching ansprechen
+  - Dauerhaftigkeit der Daten ansprechen
   - Throughput und Struktur des Datenzugriffs messen
