--- a/learn-certs-pr/courses/az-300t04.yml
+++ b/learn-certs-pr/courses/az-300t04.yml
@@ -10,12 +10,12 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Shell commands verwenden um App Services Web Apps zu erstellen
 - skill: background tasks erstellen
-- skill: Swagger verwenden, um API aufzuzeichen
-- skill: Verlässlichen Service erstellen
+- skill: Swagger nutzen um API aufzuzeichnen
+- skill: Reliable Service erstellen
 - skill: Reliable Actors App erstellen
 - skill: Praxis mit Reliable Collections
 - skill: Azure Container Registrierung verstehen
-- skill: Azure Container Instanzen verwenden
+- skill: Azure-Container-Iinstances verwenden
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
