--- a/learn-certs-pr/courses/az-300t06.yml
+++ b/learn-certs-pr/courses/az-300t06.yml
@@ -50,7 +50,7 @@ summary: |-
   Erfolgreiche Cloud Lösung-Architekten die mit praktischer Erfahrung mit Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstruktur, Billing und Networking in diese Rolle einsteigen.
 outlineSection: |-
   ### Modul 1&#58; Entwicklung langlebiger Aufgaben und verteilter Transaktionen
-  zu den Themen in diesem Modul gehören&#58; Large-scale, parallel und Hochleistungs apps durch batches implementieren; HPC durch Microsoft Azure Virtual Machines; Implementierung belastbarer Anwendungen durch die Verwendung von Warteschlangen; so wie Implementierung von Code um Anwendungsevents mit Webhooks anzusprechen Webhook Implementation gibt externen Resourcen eine URL für eine Anwendung; die externe Resource sended dann eine HTTP Anfrage an diese URL immer wenn eine Änderung gemacht wird, die die Anwendung auffordert eine Aktion durchzuführen.
+  Zu den Themen in diesem Modul gehören&#58; Large-scale, parallel und Hochleistungs apps durch batches implementieren; HPC durch Microsoft Azure Virtual Machines; Implementierung belastbarer Anwendungen durch die Verwendung von Warteschlangen; so wie Implementierung von Code um Anwendungsevents mit Webhooks anzusprechen Webhook Implementation gibt externen Resourcen eine URL für eine Anwendung; die externe Resource sended dann eine HTTP Anfrage an diese URL immer wenn eine Änderung gemacht wird, die die Anwendung auffordert eine Aktion durchzuführen.
 
 
   ### Modul 2&#58; Konfigurieren einer Message-basierten Integrationsarchitektur
@@ -60,7 +60,7 @@ outlineSection: |-
   - Eventsveröffentlichung und Abo-Modell konfigurieren
   - Azure Relay Service konfigurieren
   - Eine App oder einen Dienst mit Microsoft Graph konfigurieren
-  
+
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - eine Message-basierten Integrationsarchitektur konfigurieren
 
@@ -84,7 +84,7 @@ outlineSection: |-
   - implementieren Sie Code, der den temporären Zustand adressiert.
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Anfangen, Apps für Autoscaling zu erstellen
+  - Mit der Erstellung von Apps für Autoscaling beginnen
 
 
   ### Modul 5&#58; Azure Cognitive Services Lösungen entwickeln
@@ -107,4 +107,4 @@ outlineSection: |-
   - Blob Container Properties in NET verändern
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Azure-storage-services wie Blobs oder Cosmos DB verstehen
+  Azure-storage-services wie Blobs oder Cosmos DB verstehen
