--- a/learn-certs-pr/courses/az-301t02.yml
+++ b/learn-certs-pr/courses/az-301t02.yml
@@ -11,12 +11,12 @@ skillsGained:
 - skill: Die idealen Pricing Optionen für Azure-storage anhand von Lösungsanforderunen festlegen.
 - skill: Leistungs-Schwellen für den Azure-storage Dienst identifizieren.
 - skill: Die Art von Storage Blob festlegen der für bestimmte Lösungskomponenten zu verwenden ist.
-- skill: Azure Files Dienst für SMB Operationen Verwenden.
+- skill: Azure Files Dienst für SMB Operationen Verwenden
 - skill: Lösungen, die von der Nutzung von StorSimple physischen oder virtuellen Geräten profitieren könnten, erkennen.
-- skill: Kontrastmonitoring Dienste für Anwendungen, die Azure Platform und Netzwerke vergleichen.
+- skill: Monitoring Dienstleistungen für Anwendungen, die Azure Platform und Netzwerke vergleichen
 - skill: Ein Warnungsschema für eine in Azure gehostete Lösung entwerfen.
 - skill: Angemessene Backup-optionen für Infrastruktur und Daten in Azure auswählen.
-- skill: Entwicklung von zukünfitgen Resourcen für Backup Recovery oder Skaling Zwecke automatisieren.
+- skill: Entwicklung von zukünfitgen Resourcen für Backup Recovery oder Skaling Zwecke automatisieren
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -58,21 +58,21 @@ outlineSection: |-
   Dieses Modul beschreibt, wie viele Azure Dienstleistungen den Azure-storage Service als Sicherungsspeicher für andere Anwendungslösungen in Azure nutzen. Das Modul geht auf die wichtigsten Überlegungen für die Nutzung von Azure-storage als zusätzlichen Service für eine alles eingerechnete Azure Lösung ein.
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die idealen Pricing-optionen für Azure-storage anhand von Lösungsanforderungen festlegen.
-  - Leistungs-Schwellen für den Azure-storage Dienst erkennen.
-  - Die Art von Storage Blob für spezielle Lösungskomponenten festlegen.
-  - Azure Files Dienstleisung für SMB Operationen Verwenden.
-  - Lösungen, die von der Verwendung von StorSimple physischen oder virtuellen Geräten profitieren könnten, erkennen.
+  - Die idealen Pricing Optionen für Azure-storage anhand von Lösungsanforderunen festlegen.
+  - Leistungs-Schwellen für den Azure-storage Dienst identifizieren.
+  - Die Art von Storage Blob festlegen der für bestimmte Lösungskomponenten zu verwenden ist.
+  - Azure Files Dienst für SMB Operationen Verwenden
+  - Lösungen, die von der Nutzung von StorSimple physischen oder virtuellen Geräten profitieren könnten, erkennen.
 
 
   ### Modul 2&#58; Datenbank-optionen in Azure vergleichen
   Dieses Modul vergleicht die verschiedenen relationalen und nicht-relationalen Speicheroptionen die in Azure verfügbar sind. Optionen sind als Gruppen zusammengefasst, zum Beispiel relationale Datenbanken (Azure SQL Datenbank, MySQL on Azure), nicht-relational (Azure Cosmos DB und Storage Tables), Streaming (Stream Analytics), uns Speicher (Data Factory, Data Warehouse und Data Lake).
 
-  #### Labor &#58; Datenbank Instanzen in Azure Bereitstellen
+  #### Labor&#58; Datenbank Instanzen in Azure Bereitstellen
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Monitoring Dienstleistungen für Anwendungen, die Azure Platform und Netzwerke vergleichen.
-  - Daten Streamingoptionen für Large-scale Datenaufnahme erkennen.
-  - Langzeit Datenspeicheroptionen identifizieren.
+  - Monitoring Dienstleistungen für Anwendungen, die Azure Platform und Netzwerke vergleichen
+  - Daten Streamingoptionen für Large-scale Datenaufnahme erkennen
+  - Langzeit Datenspeicheroptionen identifizieren
 
 
   ### Modul 3&#58; Azure Lösungen Überwachen und Automatisieren
@@ -80,7 +80,7 @@ outlineSection: |-
 
   #### Labor&#58; Konfigurations Verwaltungslösungen in Azure Einrichten
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Monitoring Dienstleistungen für Anwendungen, die Azure Platform und Netzwerke vergleichen.
-  - Ein Warnsystems-schema für eine in Azure eingebettete Lösung entwerfen.
-  - die richtige Backup-option für Infrastruktur und Daten in Azure auswählen.
-  - Die Bereitstellung von zukünftigen Backup Recovery oder Scaling Zwecke automatisieren.
+  - Monitoring Dienstleistungen für Anwendungen, die Azure Platform und Netzwerke vergleichen
+  - Ein Warnungsschema für eine in Azure gehostete Lösung entwerfen.
+  - Angemessene Backup-optionen für Infrastruktur und Daten in Azure auswählen.
+  - Entwicklung von zukünfitgen Resourcen für Backup Recovery oder Skaling Zwecke automatisieren
