--- a/learn-certs-pr/courses/az-301t03.yml
+++ b/learn-certs-pr/courses/az-301t03.yml
@@ -8,13 +8,13 @@ courseNumber: 'AZ-301T03-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Resource Gruppen erstellen.
-- skill: Resourcen zu Resource Gruppen hinzufügen.
-- skill: ARM Templates für eine Resource Gruppe bereitstellen.
-- skill: API oder Logic App mit dem API Management Service integrieren.
-- skill: Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen.
-- skill: API oder Logic App mit dem API Management Service integrieren.
-- skill: Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen.
+- skill: Resource Gruppen erstellen
+- skill: Resourcen zu Resource Gruppen hinzufügen
+- skill: ARM Templates für eine Resource Gruppe bereitstellen
+- skill: API oder Logic App mit dem API Management Service integrieren
+- skill: Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen
+- skill: API oder Logic App mit dem API Management Service integrieren
+- skill: Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -57,11 +57,11 @@ outlineSection: |-
 
   #### Labor&#58; Resourcen mit Azure Resource Manager
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Resource Gruppen erstellen.
-  - Resourcen zu Resource Gruppen hinzufügen.
-  - ARM Vorlagen für Resource Gruppen Bereitstellen.
-  - Resourcen mit Tags filtern.
-  - Komplexe Bereitstellung mit Azure Building Blocks toll verfassen.
+  - Resource Gruppen erstellen
+  - Resourcen zu Resource Gruppen hinzufügen
+  - ARM Templates für eine Resource Gruppe bereitstellen
+  - Resourcen mit Tags filtern
+  - Komplexe Bereitstellung mit Azure Building Blocks toll verfassen
 
 
   ### Modul 2&#58; Managed Server Applications in Azure erstellen
@@ -70,10 +70,10 @@ outlineSection: |-
 
   #### Labor&#58; Deploying Managed Containerized Workloads to Azure
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - zwischen hosting application Code oder Containerin in einer App Service Instanz auswählen.
-  - Die Unterschiede zwischen API Mobile und Web Apps beschreiben.
-  - API oder Logic App mit dem API Management Service integrieren.
-  - App Service Plan oder multiregionale Bereitstellung für Hohe Leistung und Scale entwerfen.
+  - zwischen hosting application Code oder Containerin in einer App Service Instanz auswählen
+  - Die Unterschiede zwischen API Mobile und Web Apps beschreiben
+  - API oder Logic App mit dem API Management Service integrieren
+  - Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen
 
 
   ### Modul 3&#58; Serverlose Anwendungen in Azure verfassen
@@ -82,7 +82,7 @@ outlineSection: |-
 
   #### Labor&#58; Serverlose Workloads für Azure Bereitstellen
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - zwischen hosting application Code oder Containerin in einer App Service Instanz auswählen.
-  - Die Unterschiede zwischen API Mobile und Web Apps beschreiben.
-  - API oder Logic App mit dem API Management Service integrieren.
-  - App Service Plan oder multiregionale Bereitstellung für Hohe Leistung und Scale entwerfen.
+  - zwischen hosting application Code oder Containerin in einer App Service Instanz auswählen
+  - Die Unterschiede zwischen API Mobile und Web Apps beschreiben
+  - API oder Logic App mit dem API Management Service integrieren
+  - Einen App Service Plan oder multi-regionen Bereitstellung für Hochleistung und Scale entwerfen
