--- a/learn-certs-pr/courses/az-400t01.yml
+++ b/learn-certs-pr/courses/az-400t01.yml
@@ -47,7 +47,7 @@ outlineSection: |-
   - Autentifizierung für Ihren Git Repos
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die Vortiele von der Vwerwendung von Source Control beschreiben
+  - Die Vorteile von der Nutzung einer Lösungskontrolle beschreiben
   - von TFVC zu Git Migrieren
 
 
@@ -80,7 +80,7 @@ outlineSection: |-
   - Externe Soure Control mit Azure Pipelines integrieren
   - Analyse und Integration von Docker Multi-Stage Builds.
 
-  Nach Abschluss dieses Moduls können die Teilnehmer &#58;
+  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Implementierung und Verwaltung von Build-Infrastrukturen
 
 
@@ -93,7 +93,7 @@ outlineSection: |-
   - Implementieren von Tools für Sicherheits- und Compliancemanagement in der Pipeline
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Verwaltung von application config und Geheimnissen
+  - Verwaltung von Anwendungskonfiguration und Geheimnissen
 
 
   ### Modul 5&#58; Implementierung einer mobilen DevOps-Strategie
