--- a/learn-certs-pr/courses/az-400t02.yml
+++ b/learn-certs-pr/courses/az-400t02.yml
@@ -56,8 +56,8 @@ outlineSection: |-
 
   #### Labor&#58; Jenkins Build Job und Triggering CI erstellen
   Nach Abschluss dieses Moduls, können die Teilnehmer&#58;
-  - erklären, warum kontinuierlliche Integration wichtig ist
-  - kontinuierliche Integration mit azure-Devops implementieren
+  - erklären, warum kontinuierlliche Integration wichtig ist.
+  - Implementieren einer kontinuierlichen Integration mit Azure-Devops
 
 
   ### Modul 2&#58; Verwaltung von Codequalitäts- und Sicherheitsrichtlinien
@@ -71,9 +71,9 @@ outlineSection: |-
 
   #### Labor&#58; Vulnerabilities mit WhiteSource Bolt und Azure DevOps messen
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Codequalität inklusive&#58; Technical debt Sonar Cloud und anderen Toolingoptionen verwalten.
-  - Sicherheitsrichtlinen mit open Source, OWASP und WhitesSource Bolt verwalten.
-  - Codequalität inklusive&#58; Technical debt Sonar Cloud und anderen Toolingoptionen verwalten.
+  - Codequalität inklusive&#58; Technical debt Sonar Cloud und anderen Toolingoptionen verwalten
+  - Sicherheitsrichtlinen mit open Source, OWASP und WhitesSource Bolt verwalten
+  - Codequalität inklusive&#58; Technical debt Sonar Cloud und anderen Toolingoptionen verwalten
 
 
   ### Modul 3&#58; Implementierung einer Container-Build-Strategie
@@ -85,4 +85,4 @@ outlineSection: |-
   #### Labor&#58; Existing .NET Applications mit Azure und Docker Images
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Eine Container Strategie implementieren und den Unterschied zwischen virtuellen Maschinen und wie Mikroservices Container nutzen, kennen.
-  - Container mit Docker implementieren.
+  - Container mit Docker implementieren
