--- a/learn-certs-pr/courses/az-400t06.yml
+++ b/learn-certs-pr/courses/az-400t06.yml
@@ -8,7 +8,7 @@ courseNumber: 'AZ-400T06-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Praktiken, um Endnutzer Zufriedenheit zu messen, entwerfen
+- skill: Pratiken entwickeln, die Endnutzerzufriedenheit messen
 - skill: Entwickeln von Prozessen zum Erfassen und Analysieren von Nutzerrückmeldungen externer Quellen
 - skill: Konzept zum Routing für Crash-Report daten der Client-Anwendung entwerfen
 - skill: Empfehlen von Monitoring Tools und Technologien
@@ -38,7 +38,7 @@ products:
 exams:
 - uid: exam.az-400
 summary: |-
-  Der Kurs bietet die Kenntnisse und Fähigkeiten für die implementierung eines kontinuierlichen Feedbacks Die Teilnehmer erlenen die Empfehlung und Entwurf von System-Feedback-Mechanismen, das implementieren von System-Feedback zu entwicklerteams und die optimierung der Rückkopplungsmechanismen.
+  Der Kurs bietet die Kenntnisse und Fähigkeiten für die implementierung eines kontinuierlichen Feedbacks Die Teilnehmer erlenen die Empfehlung und Entwurf von System-Feedback-Mechanismen, das implementieren von System-Feedback zu entwicklerteams und die optimierung der Rückkopplungsmechanismen
 
   #### Zielgruppenprofil
   Teilnehmer des Kurses interessieren sich für die Implementation von DevOps-Prozessen oder möchten die Microsoft Azure DevOps-Lösungen Zertifizierungsprüfung bestehen.
@@ -59,8 +59,8 @@ outlineSection: |-
   #### Labor&#58; Feature Flags
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Pratiken entwickeln, die Endnutzerzufriedenheit messen
-  - das Entwickeln von Prozessen zum Erfassen und Analysieren von Nutzerrückmeldungen externer Quellen
-  - Konzept zum Routing für Crash-Report daten der Client-Anwendung erstellen
+  - Entwickeln von Prozessen zum Erfassen und Analysieren von Nutzerrückmeldungen externer Quellen
+  - Konzept zum Routing für Crash-Report daten der Client-Anwendung entwerfen
   - Empfehlen von Monitoring Tools und Technologien
   - Empfehlen von Trackingtools für System und Funktionsnutzung
 
@@ -73,9 +73,9 @@ outlineSection: |-
   - Integration und Konfiguration von Ticketingsysteme
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - das Konfigurieren der Crash Report-Integration für Client Apps
+  - Konfigurieren der Crash Report-Integration für Client Apps
   - Entwickeln der Monitoring- und Status-Dashboards
-  - die Implementierung eines Routings für die Daten des Crash-Berichts der Client-Anwendung
+  - Implementierung eines Routings für die Daten des Crash-Berichts der Client-Anwendung
   - Implementieren von Tools für System- und Funktionsnutzung und Flow
   - die Integration und Konfiguraiton von ticketingsystemen mit Enwicklerteams Arbeitsverwaltung
 
