--- a/learn-certs-pr/courses/az-400t07.yml
+++ b/learn-certs-pr/courses/az-400t07.yml
@@ -8,13 +8,13 @@ courseNumber: 'AZ-400T07-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Transformation mit geteilten Zielen und timelines planen.
-- skill: Ein Projekt auswählen und Projektmetriken und KPIs identifizieren.
-- skill: Team und Agile Organisationsstruktur erstellen.
-- skill: Eine Projektqualitäts-strategie entwickeln.
-- skill: Sichere entwicklungspraktiken und Complianceregeln planen.
-- skill: Artifakte migrieren.
-- skill: Migration und Integration von Source Control.
+- skill: Transformation mit geteilten Zielen und timelines planen
+- skill: Ein Projekt auswählen und Projektmetriken und KPIs identifizieren
+- skill: Team und Agile Organisationsstruktur erstellen
+- skill: Eine Projektqualitäts-strategie entwickeln
+- skill: Sichere entwicklungspraktiken und Complianceregeln planen
+- skill: Artefakte Migrieren und konsolidieren
+- skill: Migration und Integration von Source Control
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -36,7 +36,7 @@ summary: |-
   #### Zielgruppenprofil
   Die Teilnehmer dieses Kurses sind daran interessiert, DevOps Projekte zu planen oder die Microsoft Azure DevOps-Lösungen Zertifizierungsprüfung zu bestehen.
 prerequisitesSection: |-
-  - Grundlegendes Wissen über Azure, version control, Agile software development, und core software development principles. Erfahrung in einer Organisation die Software liefert ist hilfreich.
+  - Fundamentales Wissen über Azure, Version Control, Agile Software Development und KernSoftware Entwicklungsprinzipen. Erfahrung in einer Organisation die Software liefert ist hilfreich.
   - Es wird außerdem empfohlen, dass Sie Erfahrung in der Arbeit mit einer IDE und einige Kenntnisse über das Azure Portal besitzen. Die Teilnehmer, die keinen technischen Hintergrund in diesesn technologien haben, aber neugierig über DevOps Praktiken als Culture Shift sind, sollten den Prozeduren und den Erklärungen der kontinuierlischen Integration trotzdem folgen können.
 outlineSection: |-
   ### Modul 1&#58; DevOps Planung
@@ -49,8 +49,8 @@ outlineSection: |-
 
   #### Labor&#58; Agile Planning and Portfolio Management with Azure Boards
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Transformarion mit geteilten Zielen und Timelines planen
-  - Projektauswahl treffen und Projektmetriken und KPIs identifizieren
+  - Transformation mit geteilten Zielen und timelines planen
+  - Ein Projekt auswählen und Projektmetriken und KPIs identifizieren
   - Team und Agile Organisationsstruktur erstellen
 
 
@@ -63,8 +63,8 @@ outlineSection: |-
 
   #### Labor&#58; Feature Flag Management with LaunchDarkly and AzureDevOps
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Projektqualitätsstrategie entwickeln
-  - sichere Entwicklung und Complianceregeln planen
+  - Eine Projektqualitäts-strategie entwickeln
+  - Sichere entwicklungspraktiken und Complianceregeln planen
 
 
   ### Modul 3&#58; Artefakte und Tools Migrieren
@@ -77,4 +77,4 @@ outlineSection: |-
   #### Labor&#58; Integration von Azure Repos und Azure Pipelines mit Eclipse
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Artefakte Migrieren und konsolidieren
-  - die Implementierung und Integration von Source Control
+  - Migration und Integration von Source Control
