--- a/learn-certs-pr/courses/az-500t00.yml
+++ b/learn-certs-pr/courses/az-500t00.yml
@@ -31,17 +31,19 @@ exams:
 - uid: exam.az-500
 summary: |-
   In diesem Kurs lernen die Studenten die Kenntnisse und
-  Die Fähigkeiten um Sicherheitskontrolle hu implementieren, Sciherheit zu erhalten Und Schwächen zu identifizieren und beheben druch verschiedene sicherheits Tools. Der Kurs deckt Skripting und Automatisierung, Virtualisierung und Cloud
+  Die Fähigkeiten um Sicherheitskontrolle hu implementieren, Sciherheit zu erhalten
+  Und Schwächen zu identifizieren und beheben druch verschiedene sicherheits
+  Tools. Der Kurs deckt Skripting und Automatisierung, Virtualisierung und Cloud
   N-Tier Architektur ab.
 
   #### Zielgruppenprofil
   Die Teilnehmer sollten mindestens ein Jahr praktische Erfahrung in der Sicherung von Azure-Workloads und Erfahrung mit Sicherheitskontrollen für Azure-Workloads haben.
-prerequisitesSection: |-  
+prerequisitesSection: |-
   [Microsoft Azure Administrator Associate](https://docs.microsoft.com/learn/certifications/azure-administrator)
 outlineSection: |-
   ### Modul 1&#58; Identität und Zugriff
   #### Lektionen
-  - Azure Active Directory für Azure workloads und subscriptions konfigurieren
+  -  Azure Active Directory für Azure workloads und subscriptions konfigurieren
   - Implementierung von Azure AD Privilegiertes Identitätsmanagement
   - Sicherheit für eine Azure Subscription konfigurieren
 
