--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Microsoft Azure Fundamentals
+title: Microsoft Azure Fundamentals (1 TagEnglisch)
 metadata:
-  title: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals'
-  description: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals'
+  title: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals (1 Tag Englisch)'
+  description: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals (1 Tag Englisch)'
 uid: course.az-900t01
 courseNumber: 'AZ-900T01-A'
 hoursToComplete: 24
@@ -31,10 +31,9 @@ summary: |-
   Außerdem werden einige der Azure Kernsdienste und Lösungen behandelt, so wie pillar services der Sicherheit, Datenschutz, Compliance und Vertrauen. Pricing und Unterstüzungsdienste in Azure sind auch ein Teil des Kurses.
 
   #### Zielgruppenprofil
-  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Er richtet sich an jeden, der mehr über Microsoft Azure lernen möchte.
+  Es gibt keine Voraussetzungen für die Teilnahme am Kurs.  Er richtet sich an jeden, der mehr über Microsoft Azure lernen möchte.
 prerequisitesSection: |-
   Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
-
 outlineSection: |-
   ### Modul 1&#58; Cloud-Konzepte
   In diesem Modul geht es um die grundlegenden Cloud Konzepte
@@ -77,10 +76,10 @@ outlineSection: |-
   ### Modul 4&#58; Azure Pricing and Support
   In diesem Modul liegt der Fokus auf Pricing und Unterstützungsmodelle in Microsoft.
   #### Lektionen
-  - Azure Abos
+  -  Azure Abos
   - Kostenplanung und Verwaltung
   - Support Optionen für Azure
   - Service Lifecycle in Azure
 
   Nach Abschluss des Moduls können die Teilnehmer&#58;
-  - Pricing und Support Modelle in Microsoft verstehen
+  - Pricing und Unterstützungsmodelle für Microsoft verstehen
