--- a/learn-certs-pr/courses/dp-050t00.yml
+++ b/learn-certs-pr/courses/dp-050t00.yml
@@ -104,7 +104,7 @@ outlineSection: |-
   - Daten nach Azure SQL Datenbank laden und bewegen
 
 
-  #### Labor&#58; SQL-Workloads nach Azure SQL: Datenbank übertragen
+  #### Labor&#58; SQL-Workloads nach Azure SQL&#58; Datenbank übertragen
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - den richtige SQL Server Instance Option in Azure auswählen
   - SQL Server nach Azure SQL offline Migration
