--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Entwerfen einer Azure-Datenlösungs
+title: Designing an Azure Data Solution
 metadata:
-  title: 'Kurs DP-201T01-A: Entwerfen einer Azure-Datenlösung'
-  description: 'Kurs DP-201T01-A: Entwerfen einer Azure-Datenlösung'
+  title: 'Kurs DP-201T01-A: Designing an Azure Data Solution'
+  description: 'Kurs DP-201T01-A: Designing an Azure Data Solution'
 uid: course.dp-201t01
 courseNumber: 'DP-201T01-A'
 hoursToComplete: 48
@@ -36,7 +36,7 @@ summary: |-
 prerequisitesSection: |-
   Zusätzlich zu ihrer Beruflichen Erfahrun sollten die Teilnehmer des Kurses technische Kenntnisse, die mit folgenden Kursen übereinstimmen, besitzen&#58;
   - [Azure Fundamentals](https://docs.microsoft.com/learn/modules/welcome-to-azure/)
-  - DP-200&#58; Implementierung einer Azure-Datenlösung
+  - DP-200 Implementierung einer Azure-Datenlösung
 outlineSection: |-
   ### Modul 1&#58; Data Platform Architecture Considerations
   In diesem Modul werden die Teilnehmer lernen, wie man sichere, skalierbare und performant Lösungen in Azure entwirft und baut, indem sie die Kernprinzipien untersuchen, die in jeder guten Architektur zu finden sind. Sie werden lernen, wie die Anwendung von Schlüsselprinzipien in der gesamten Architektur, unabhängig von der Wahl der Technologie, Ihnen dabei helfen kann, die Architektur zu entwerfen, zu bauen und kontinuierlich zum Nutzen des Unternehmens zu verbessern.
@@ -67,20 +67,20 @@ outlineSection: |-
   #### Lektionen
   - Lambda Architektur für Batch Mode Perspective
   - Enterprise BI Solutions in Azure erstellen
-  - Enterprise BI Solutions in azure automatisieren
+  -  Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
 
 
   #### Labor&#58; Architect an Enterprise-grade Conversational Bot in Azure
-  - Enterprise BI Solutions in Azure erstellen
-  - Enterprise BI Solutions in azure automatisieren
-  - Enterprise BI Solutions in azure automatisieren
+  -  Enterprise BI Solutions in Azure erstellen
+  -  Enterprise BI Solutions in azure automatisieren
+  -  Enterprise BI Solutions in azure automatisieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Prinzipien der Architekturerstellung verstehen
+  -Prinzipien der Architekturerstellung verstehen
   - Lambda Architektur für Batch Mode Perspective beschreiben
   - Enterprise BI Solutions in Azure erstellen
-  - Enterprise BI Solutions in azure automatisieren
+  -  Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
 
 
@@ -107,7 +107,7 @@ outlineSection: |-
 
 
   ### Modul 4&#58; Data Platform Security Design Considerations
-  In diesem Modul lernen die Studenten, wie sie Sicherheit in ein Architekturdesign integrieren können und die wichtigsten Entscheidungspunkte in Azure , die zur Schaffung einer sicheren Umgebung über alle Architekturschichten hinweg beitragen.
+  In diesem Modul lernen die Studenten, wie sie Sicherheit in ein Architekturdesign integrieren können und  die wichtigsten Entscheidungspunkte in Azure , die zur Schaffung einer sicheren Umgebung über alle Architekturschichten hinweg beitragen.
   #### Lektionen
   - Verteidigung in Depth Security Ansatz
   - Verwaltung von Identitäten
@@ -121,7 +121,7 @@ outlineSection: |-
   - Verteidigung in Depth Security Ansatz
   - Identitätsschutz
 
-  Nach Abschluss diese Moduls können die Teilnehmer folgende Aspekte verstehen&#58;
+  - Nach Abschluss diese Moduls können die Teilnehmer folgende Aspekte verstehen:
   - Verteidigung in Depth Security Ansatz
   - Verwaltung von Identitäten
   - Schutz der Infrastruktur
@@ -135,7 +135,7 @@ outlineSection: |-
   #### Lektionen
   - Workload Kapazität durch Skaling anpassen
   - Netzwerkleistung optimieren
-  - Optimierte Speicher und Datenbankleistung erstellen
+  Optimierte Speicher und Datenbankleistung erstellen
   - Leistungs Bottlenecks identifizieren
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
@@ -144,14 +144,14 @@ outlineSection: |-
 
   #### Labor&#58; Designing for Resiliency and Scale
   - Workload Kapazität durch Skaling anpassen
-  - Optimierte Speicher und Datenbankleistung erstellen
+  Optimierte Speicher und Datenbankleistung erstellen
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Workload Kapazität durch Skaling anpassen
   - Netzwerkleistung optimieren
-  - Optimierte Speicher und Datenbankleistung erstellen
+  Optimierte Speicher und Datenbankleistung erstellen
   - Leistungs Bottlenecks identifizieren
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
