--- a/learn-certs-pr/courses/mb-200t02.yml
+++ b/learn-certs-pr/courses/mb-200t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: 'Dynamics 365: Power Platform-Automatisierung'
+title: 'Dynamics 365: Power Platform anwendungen'
 metadata:
-  title: 'Kurs MB-200T02-A: Dynamics 365: Power Platform-Automatisierung'
-  description: 'Kurs MB-200T02-A: Dynamics 365: Power Platform-Automatisierung'
+  title: 'Kurs MB-200T02-A: Dynamics 365: Power Platform anwendungen'
+  description: 'Kurs MB-200T02-A: Dynamics 365: Power Platform anwendungen'
 uid: course.mb-200t02
 courseNumber: 'MB-200T02-A'
 hoursToComplete: 24
@@ -10,10 +10,10 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Identifizieren der verfügbaren Automatisierungsoptionen in der Power-Plattform.
 - skill: Identifizieren, wann welche Automatisierung verwendet werden soll.
-- skill: Geschäftsregeln erstellen und verwenden.
-- skill: Erstellen und Verwenden von Arbeitsabläufen.
-- skill: Microsoftabläufe erstellen und verwenden.
-- skill: Geschäftsprozessabläufe erstellen und verwenden.
+- skill: Geschäftsregeln erstellen und verwenden
+- skill: Erstellen und Verwenden von Arbeitsabläufen
+- skill: Microsoftabläufe erstellen und verwenden
+- skill: Geschäftsprozessabläufe erstellen und verwenden
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -39,7 +39,7 @@ summary: |-
 prerequisitesSection: |-
   Vertrautheit mit Geschäftsanwendungen und der Wunsch, diese für Ihr Unternehmen anzupassen und zu implementieren.
 outlineSection: |-
-  ### Modul 1&#58; Übersicht über die Plattformautomatisierung
+  ### Modul 1&#58; Plattformübersicht
   In diesem Modul lernen die Studenten die Grundlagen der Automatisierungsmöglichkeiten der Power-Plattform. Sie lernen die Notwendigkeit der Automatisierung und die Zuordnung der Anforderungen zu den Funktionen.
   #### Lektionen
   - Plattform-Automatisierungsübersicht
@@ -80,7 +80,7 @@ outlineSection: |-
   - Arbeiten mit CDS
   - Genehmigungsabläufe erstellen
   - Ausgehend von Apps
-  - Überlegungen zur Bereitstellung des Ablaufs
+  Überlegungen zur Bereitstellung des Ablaufs
   - Modulübersicht
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
