--- a/learn-certs-pr/courses/mb-200t03.yml
+++ b/learn-certs-pr/courses/mb-200t03.yml
@@ -31,10 +31,10 @@ exams:
 summary: |-
   Mit Hilfe der Microsoft Power-Platform können Unternehmen Abläufe optimieren, indem sie Routineaufgaben automatisieren und bewährte Praktiken standardisieren. Diese Schulung bietet einen allgemeinen Überblick über die Funktionen von Microsoft Dynamics 365 und der Power-Plattform und bildet die Grundlage für andere Schulungsangebote von Microsoft Dynamics 365 und der Power-Plattform.
 
-  In diesem Kurs führen unsere weltweit anerkannten Experten die Studenten durch die verschiedenen verfügbaren Integrationund deren Verwendung in realen Szenarien.
+  In diesem Kurs führen unsere weltweit anerkannten Experten die Studenten durch die verschiedenen verfügbaren Automatisierungsoptionen und deren Verwendung in realen Szenarien.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit Hilfe von gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Vertrautheit mit Geschäftsanwendungen und der Wunsch, diese für Ihr Unternehmen anzupassen und zu implementieren.
 outlineSection: |-
@@ -75,6 +75,6 @@ outlineSection: |-
   - Modulübersicht
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Daten im- und exportieren
+  - Daten importieren und exportieren
   - Erstellen und Verwenden von Datenkarten
   - Massenlöschung durchführen
