--- a/learn-certs-pr/courses/mb-210t01.yml
+++ b/learn-certs-pr/courses/mb-210t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Dynamics 365 für Kundenbindung im Vertrieb
+title: Dynamics 365 for customer engagement for sales
 metadata:
-  title: 'Kurs MB-210T01-A: Dynamics 365 für Kundenbindung im Vertrieb'
-  description: 'Kurs MB-210T01-A: Dynamics 365 für Kundenbindung im Vertrieb'
+  title: 'Kurs MB-210T01-A: Dynamics 365 for customer engagement for sales'
+  description: 'Kurs MB-210T01-A: Dynamics 365 for customer engagement for sales'
 uid: course.mb-210t01
 courseNumber: 'MB-210T01-A'
 hoursToComplete: 24
@@ -45,7 +45,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Installieren und konfigurieren der Vertriebsanwendung
-  - Gängige Vertriebsszenarien identifizieren
+  -Gängige Vertriebsszenarien identifizieren
 
 
   ### Modul 2&#58; Mit Chancen arbeiten
@@ -60,7 +60,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Kundendatensätze erstellen
-  - Vertriebstools nutzen
+  -Vertriebstools nutzen
 
 
   ### Modul 3&#58; Von Angeboten zu Bestellungen
@@ -73,7 +73,7 @@ outlineSection: |-
   - Modulübersicht
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Den Produktkatalog erstellen und verwenden
+  -Den Produktkatalog erstellen und verwenden
   - Angebote zu Möglichkeiten hinzu zu fügen
   - Schließen Sie einen Verkauf mit einer Bestellung ab
 
