--- a/learn-certs-pr/courses/mb-220t01.yml
+++ b/learn-certs-pr/courses/mb-220t01.yml
@@ -10,7 +10,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Erweiterte Einstellungen konfigurieren
 - skill: Verwalten von Marketinginhalten, Vorlagen und Integrationen
-- skill: Erstellen und Verwalten von Kontakten
+- skill: Leads erstellen und verwalten
 - skill: Bewertung der Verkaufsbereitschaft anhand von Modellen zur Bewertung der Leads
 - skill: Entwerfen und erstellen von Marketingformularen und -seiten
 - skill: Segmente, Abonnementscenter, Listen und Double-Opt-In's erstellen und verwalten
@@ -100,7 +100,7 @@ outlineSection: |-
   - Speichern einer E-Mail-Nachricht als Vorlage
 
 
-  ### Modul  6&#58; Customer Journeys
+  ### Modul 6&#58; Customer Journeys
   In diesem Modul wird der Erstellungsprozess für Customer Journeys überprüft.
   #### Lektionen
   - Erstellen Sie Customer Journeys
