--- a/learn-certs-pr/courses/mb-230t01.yml
+++ b/learn-certs-pr/courses/mb-230t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Dynamics 365 for Customer Service für Kundendienst
+title: Dynamics 365 for customer engagement for customer service
 metadata:
-  title: 'Kurs MB-230T01-A: Dynamics 365 for Customer Service für Kundendienst'
-  description: 'Kurs MB-230T01-A: Dynamics 365 for Customer Service für Kundendienst'
+  title: 'Kurs MB-230T01-A: Dynamics 365 for customer engagement for customer service'
+  description: 'Kurs MB-230T01-A: Dynamics 365 for customer engagement for customer service'
 uid: course.mb-230t01
 courseNumber: 'MB-230T01-A'
 hoursToComplete: 24
@@ -38,7 +38,7 @@ prerequisitesSection: |-
   Dieser Kurs richtet sich an Personen, die die Microsoft 365 Enterprise-Administratorrolle anstreben und einen der Microsoft 365-Zertifizierungspfade für Workload-Administratoren abgeschlossen haben.
 outlineSection: |-
   ### Modul 1&#58; Kundendienstübersicht
-  In diesem Modul lernen die Studierenden die Grundlagen des Kundenservice in Dynamics 365. Die Teilnehmer installieren und konfigurieren die Anwendung und lernen Sicherheitsrollen, zugehörige Anwendungen und Analysen kennen.
+  In diesem Modul lernen die Studenten die Grundlagen des Vertriebs in Dynamics 365.  Die Teilnehmer installieren und konfigurieren die Anwendung und lernen Sicherheitsrollen, zugehörige Anwendungen und Analysen kennen.
   #### Lektionen
   - Lektion 1&#58; Falldatensätze erstellen
   - Lektion 2&#58; Verwandte Service-Apps
@@ -58,7 +58,7 @@ outlineSection: |-
   - Lektion 1&#58; Case Management-Übersicht
   - Lektion 2&#58; Fallakten erstellen
   - Lektion 3&#58; Warteschlangenverwaltung
-  - Lektion 4&#58; Fallrouting
+  - Lektion 4&#58;Fallrouting
   - Lektion 5&#58; Fälle lösen
   - Lektion 6&#58; Modulübersicht
 
@@ -83,7 +83,7 @@ outlineSection: |-
   ### Modul 4&#58; Wissensmanagement
   In diesem Modul lernen die Studenten, Wissensmanagement zu erstellen und anzuwenden.  Darüber hinaus lernen die Studenten den Lebenszyklus von Fachartikeln kennen.
   #### Lektionen
-  - Lektion 1&#58; Wissensmanagement - Übersicht
+  - Lektion 1&#58; Case Management-Übersicht
   - Lektion 2&#58; Verfassen und organisieren
   - Lektion 3&#58; Verwenden von Wissensinhalten
   - Lektion 4&#58; Wissensinhalte verwalten
