--- a/learn-certs-pr/courses/mb-240t02.yml
+++ b/learn-certs-pr/courses/mb-240t02.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Ausführung von Arbeitsaufträgen und Lieferungen für Dynamics 365 for Field Service
+title: Arbeitsauftrag und Lieferausführung für Dynamics 365 für den Außendienst
 metadata:
   title: 'Kurs MB-240T02-A: Arbeitsauftrag und Lieferausführung für Dynamics 365 für den Außendienst'
   description: 'Kurs MB-240T02-A: Arbeitsauftrag und Lieferausführung für Dynamics 365 für den Außendienst'
@@ -31,7 +31,6 @@ summary: |-
   In diesem Kurs werden die Teilnehmer mit den erforderlichen Fähigkeiten ausgestattet, Schlüsselkomponenten zu identifizieren und zu konfigurieren, die für die Bereitstellung von Außendienst- und mobilen Lösungen verwendet werden. Zu den Hauptthemen gehören das Ermitteln des typischen Lebenszyklus eines Arbeitsauftrags sowie die organisatorischen Überlegungen, die die Konfigurationsentscheidungen beeinflussen. Darüber hinaus konzentriert sich dieser Kurs auf Komponenten, die häufig in Bezug auf Arbeitsaufträge verwendet werden, einschließlich Vereinbarungen, Bestandskomponenten, Einkauf und Mobilitätsstrategien.     
 
   Dieser Kurs hilft Studenten, das Gesamtbild und die Endziele zu verstehen, die sich auf Auftragsausführung und -realisierung konzentrieren, die beim Entwerfen effizienterer Lösungen helfen, welche auf Kunden- und Organisationsziele ausgerichtet sind.
-
 prerequisitesSection: |-
   Grundlegendes Verständnis der Eigenschaften, Funktionen und Navigation von Dynamics 365.
 outlineSection: |-
