--- a/learn-certs-pr/courses/mb-240t03.yml
+++ b/learn-certs-pr/courses/mb-240t03.yml
@@ -32,13 +32,12 @@ summary: |-
   Dieser Kurs vermittelt den Teilnehmern die erforderlichen Kenntnisse, um die verfügbaren Tools für eine effizientere Verwaltung der Organisationsressourcen zu konfigurieren und zu nutzen. Zentrale Themen sind zu identifizieren, z.B. wo man beginnen soll, sowie organisatorische Überlegungen, die Entscheidungen zur Ressourcenplanung Entscheidungen antreiben. Das Hauptaugenmerk wird darauf gerichtet sein, wie die Tools, die zum Lokalisieren und Planen von Ressourcen zur Verfügung stehen, am besten genutzt werden können, z. B. mit Hilfe der Planungstafel und des Planungsassistenten. Darüber hinaus werden Anpassungsszenarien untersucht, wie z. B. das Aktivieren von Zeitplanelementen, das Definieren von Zeitplanoptionen, das Arbeiten mit mehreren Zeitplanelementen und das Erweitern der zentralen Zeitplanfunktionen.     
 
   Dieser Kurs hilft den Studenten, besser zu verstehen, was für Organisationen beim Planen von Ressourcen wichtig ist, und konzentriert sich auf Aspekte der Umsetzung, die beim Entwerfen effizienterer Lösungen helfen, die mit Kunden- und Organisationszielen in Einklang stehen.
-
 prerequisitesSection: |-
   Grundlegendes Verständnis der Eigenschaften, Funktionen und Navigation von Dynamics 365.
 outlineSection: |-
   ### Modul 1&#58; Universelle Ressourcenplanung
   #### Lektionen
-  - Universelle Ressourcenplanung  (URS) Überblick und Konfiguration
+  - Universelle Ressourcenplanung  (URS) - Überblick und Konfiguration
   - Entitäten für URS aktivieren
   - Überlegungen zur Anpassung und Automatisierung von Entitäten
 
