--- a/learn-certs-pr/courses/mb-300t02.yml
+++ b/learn-certs-pr/courses/mb-300t02.yml
@@ -23,10 +23,10 @@ exams:
 summary: |-
   Unternehmen verwenden Dynamics 365 for Finance and Operations, um Betriebskosten zu senken und schnell auf sich ändernde Geschäftsanforderungen reagieren zu können. Mit dieser Lösung können Unternehmen diese Ziele erreichen. 
 
-  In diesem Kurs wird erläutert, wie Sie die Kernkomponenten von Microsoft Dynamics 365 für Finanzen und Betrieb konfigurieren.
+  In diesem Kurs werden die Kernkomponenten von Microsoft Dynamics 365 for Finance and Operations erläutert.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit Hilfe von gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Grundlegendes Verständnis von ERP- und CRM-Konzepten.
 outlineSection: |-
@@ -40,12 +40,12 @@ outlineSection: |-
   - Kalender und Datenintervalle konfigurieren
   - Übungslabore
   - Modulübersicht
-  
+
 
   Die Studenten haben gelernt, eine juristische Einheit zu erstellen und Nummernfolgen manuell oder mit Hilfe eines Assistenten zu generieren. Die Studenten haben auch Kalender und Datumsintervalle konfiguriert. Darüber hinaus haben sie gelernt, wie man Organisationshierarchien erstellt, Zielsetzungen anwendet und Richtlinien einrichtet, um Geschäftsrichtlinien und Berichtsstrukturen zu optimieren.
 
   ### Modul 2&#58; Benutzer und Sicherheit verwalten
-  Microsoft Dynamics 365 for Finance and Operations verfügt über eine Reihe von Sicherheits- und Konfigurationsoptionen, um die Sicherheit sensibler Daten zu gewährleisten. Dies alles bedeutet, dass sich die Benutzer weiterhin auf ihre Rollen konzentrieren können, während das System so rational wie möglich bleibt.
+  Microsoft Dynamics 365 for Finance and Operations  verfügt über eine Reihe von Sicherheits- und Konfigurationsoptionen, um die Sicherheit sensibler Daten zu gewährleisten. Dies alles bedeutet, dass sich die Benutzer weiterhin auf ihre Rollen konzentrieren können, während das System so rational wie möglich bleibt.
   Mit dem Wissen, wie verschiedene Sicherheitsoptionen implementiert werden, können Unternehmen ihre Sicherheitsanforderungen besser erfüllen. Wenn die Sicherheitsarchitektur von Finance and Operations verstanden wird, kann die Sicherheit leichter an die Anforderungen eines Unternehmens angepasst werden.
   #### Lektionen
   - Verstehen der Sicherheitsarchitektur
@@ -55,7 +55,7 @@ outlineSection: |-
   - Richten Sie Batch-Jobs und Warnungen ein
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul haben die Studenten&#58;
   - Die Sicherheitsarchitektur von Finance and Operations verstanden
@@ -73,9 +73,9 @@ outlineSection: |-
   - Erstellen und Verwalten von Datensatzvorlagen
   - Übungslabore
   - Modulübersicht
-  
 
-  Die Studenten haben nun gelernt, wie man Benutzeroptionen nutzen und anwenden, Personalisierungen erstellen und Personalisierungen exportieren kann, die von anderen Benutzern verwendet werden sollen, und zwar mit Hilfe der Personalisierungsfunktion von Finance and Operations. Sie haben auch den Unterschied zwischen Anpassung und Personalisierung gelernt. Insbesondere, wie Sie durch Personalisierung Zeit sparen, indem Sie häufig verwendete Feldwerte personalisieren und Datensatzvorlagen erstellen und verwalten.
+
+  Die Studenten haben nun gelernt, wie man Benutzeroptionen nutzen und anwenden, Personalisierungen erstellen und Personalisierungen exportieren kann, die von anderen Benutzern verwendet werden sollen, und zwar mit Hilfe der Personalisierungsfunktion von Finance and Operations. Sie haben auch den Unterschied zwischen Anpassung und Personalisierung gelernt. In particular, how personalization helps save time personalizing often-used field values and allows for creation and maintenance of record templates.
 
   ### Modul 4&#58; Allgemeine Integrationsfunktionen implementieren
   Microsoft Dynamics 365 lässt sich in viele andere gängige Programme integrieren, zum Beispiel E-Mail, Microsoft Office und Power BI.
@@ -88,7 +88,7 @@ outlineSection: |-
   - Daten in allgemeine Datendienste für Apps Integrieren
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Teilnehmer, wie man die Microsoft Office-Integration in Dynamics 365 for Finance and Operations verwendet, E-Mails (SMTP / Exchange) konfiguriert und E-Mail-Vorlagen erstellt und verwaltet, um die Nachrichten beim Senden von E-Mails an Kunden zu standardisieren. Durch das Einrichten von Netzwerkdruckfunktionen können Unternehmensnetzwerkdrucker remote verwendet werden. Schließlich bietet dieses Modul einen Überblick über die Integration von Daten aus mehreren Quellen in allgemeine Datendienste für Apps und die Integration der Daten in Dynamics 365 for Finance and Operations über den Datenverwaltungsarbeitsbereich.
 
@@ -98,6 +98,6 @@ outlineSection: |-
   - Abschließende Bewertung
   - Kurszusammenfassung
   - Umfrage nach dem Kurs
-  
+
 
   Die Kursteilnehmer haben den Kurs abgeschlossen.
