--- a/learn-certs-pr/courses/mb-300t03.yml
+++ b/learn-certs-pr/courses/mb-300t03.yml
@@ -26,7 +26,7 @@ summary: |-
   In diesem Kurs werden die Datenmigration und die Inbetriebnahme von Microsoft Dynamics 365 for Finance and Operations erläutert.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit Hilfe von gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Grundlegendes Verständnis von ERP- und CRM-Konzepten.
 outlineSection: |-
@@ -37,11 +37,11 @@ outlineSection: |-
   - BYOD-Funktion verstehen
   - Eine Testmigration durchführen und den Ausgang validieren
   - Modulübersicht
-  
+
 
   Wenn es Zeit für Datenmigration ist, ist es umso einfacher, die Komplexität des Betriebs zu kontrollieren und die Kosten zu senken, je mehr man davon weiß. Die Kontinuität des Geschäfts des Kunden muss Vorrang haben. In diesem Modul lernen die Teilnehmer, wie man Daten für eine erfolgreiche Migration vorbereitet, indem man wichtige Faktoren wie vorhandene Systeme, sowie statische und allgemeine Daten identifiziert.
-  
-  
+
+
   In diesem Modul lernen die Studenten, wie man&#58;
   - Eine Datenintegrationsstrategie (Import / Export) auswählt
   - Identifizieren gängiger Migrationsszenarien und -tools in Finance and Operations
@@ -65,12 +65,12 @@ outlineSection: |-
   - Datenverwaltung und -integration verstehen
   - Datenverwaltungsarbeitsbereich
   - Vorlagen in der Datenverwaltung
-  - Daten importieren, exportieren und in eine juristische Einheit kopieren
+  - Daten importieren, exportieren und in eine  juristische Einheit kopieren
   - Übungslabore
   - Modulübersicht
-  
 
-  In diesem Modul lernen die Studenten, wie man&#58
+
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Das richtige Muster für ein bestimmtes Szenario identifizieren, um die Datenverwaltungsplattform für die Integration mit Hilfe von Datenentitäten zu verwenden zu können
   - Arbeiten mit dem Arbeitsbereich Datenverwaltung
   - Daten aus einer juristischen Einheit kopieren
@@ -88,12 +88,12 @@ outlineSection: |-
   - Erstellen und Ausführen von Testfällen für die Benutzerakzeptanz
   - Übungslabor
   - Modulübersicht
-  
 
-  In diesem Modul lernten die Schüler&#58;
+
+  In diesem Modul lernten die Schüler etwas über&#58;
   - Wie man die Korrelation zwischen Testfällen und Geschäftsanforderungen versteht
   - Bewährte Taktiken für die Aufzeichnung von Testfällen
-  - Task-Rekorder
+  Task-Rekorder
   - Wie man eine BPM-Bibliothek für Szenarienakzeptanztests erteilt
   - Wie man ihren Testplan in Azure DevOps synchronisiert und konfiguriert
   - Ausführen von Tests
@@ -108,7 +108,7 @@ outlineSection: |-
   - Einführung
   - Machen Sie sich bereit zur Inbetriebnahme
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Sich auf die Inbetriebnahme vorbereitet
@@ -124,6 +124,6 @@ outlineSection: |-
   - Abschließende Bewertung
   - Kurszusammenfassung
   - Umfrage nach dem Kurs
-  
+
 
   Die Kursteilnehmer haben den Kurs abgeschlossen.
