--- a/learn-certs-pr/courses/mb-310t01.yml
+++ b/learn-certs-pr/courses/mb-310t01.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Konfigurieren und Verwenden wesentlicher Komponenten des Finanzmanagements in Dynamics 365 for Finance and Operations
+title: Konfigurieren und Verwenden wesentlicher Komponenten des Finanzmanagements in Dynamics 365 für Finanzen und Betrieb
 metadata:
   title: 'Kurs MB-310T01-A: Konfigurieren und Verwenden wesentlicher Komponenten des Finanzmanagements in Dynamics 365 für Finanzen und Betrieb'
   description: 'Kurs MB-310T01-A: Konfigurieren und Verwenden wesentlicher Komponenten des Finanzmanagements in Dynamics 365 für Finanzen und Betrieb'
@@ -25,7 +25,7 @@ summary: |-
   In diesem Kurs wird erläutert, wie wichtige Komponenten des Finanzmanagements in Dynamics 365 for Finance and Operations konfiguriert und verwendet werden.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit Hilfe von gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Grundlegendes Verständnis von ERP- und CRM-Konzepten.
 outlineSection: |-
@@ -58,7 +58,7 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Zwischen Hauptbuch- und Steuerkalendern unterscheidet
   - Steuerkalendern, Jahre und Perioden konfiguriert und einrichtet
   - Datumsintervalle erstellt und verwendet
@@ -74,7 +74,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Erforderlichen Komponenten für den Kontenplan zu identifizieren
   - Kontenplan zu definieren und konfigurieren
   - Die finanziellen Dimensionen und Dimensionssätze zu definieren und konfigurieren
@@ -109,7 +109,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Banken erstellt und konfiguriert
   - Banklayouts erstellt und konfiguriert
   - Cash- und Bankverwaltungsparameter konfiguriert
@@ -125,7 +125,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Mit Cash- und Bankverwaltungsprozessen arbeitet
   - Cash- und Bankverwaltungsarbeitsbereiche nutzt
   - Einzahlungen macht
