--- a/learn-certs-pr/courses/mb-310t02.yml
+++ b/learn-certs-pr/courses/mb-310t02.yml
@@ -21,7 +21,7 @@ exams:
 - uid: exam.mb-310
 summary: |-
   Unternehmen setzen Dynamics 365 for Finance und Operations zur Steigerung ihrer finanziellen Performance ein, weil es die Rentabilität steigern, die Produktivität ihrer Mitarbeiter optimieren, die Betriebskosten senken, sich schnell an geänderte Anforderungen anpassen und das Asset-Management optimieren kann.
-  
+
   In diesem Kurs wird erläutert, wie Sie Kreditoren, Forderungen und Sammlungen in Dynamics 365 for Finance and Operations konfigurieren und verwenden.
 
   #### Zielgruppenprofil
@@ -40,7 +40,7 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Kreditorenkomponenten konfiguriert
   - Das Erstellen und verwalten einen Lieferanten
   - Kreditorenzahlungen konfigurieren
@@ -70,7 +70,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Transaktionen abwickeln und Abrechnungen rückgängig machen
   - Gelder mittels Kostenzuordnung verteilen
   - Rechnungsprüfungsrichtlinien konfigurieren
@@ -82,12 +82,12 @@ outlineSection: |-
   #### Lektionen
   - Debitoren konfigurieren
   - Kundenkonten anlegen und warten
-  - Kundenbuchungsprofile einrichten
+  - Kundenbuchungsprofile einrichtet
   - Konfiguration der Debitorengebühren
   - Übungslabor
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Debitoren konfiguriert
   - Kundenkonten anlegt und wartet
   - Kundenzahlungen konfiguriert
@@ -96,7 +96,7 @@ outlineSection: |-
 
 
   ### Modul 5&#58; Tägliche Abläufe in der Debitorenbuchhaltung durchführen
-  Erfahren Sie, wie Sie freie Textrechnungen erstellen, Zahlungen von Kunden erhalten und bei der Bank einzahlen. Die Studenten lernen auch, wie man einem Kunden einen überzahlten Betrag oder eine Summe aus anderem Grund erstatten kann z. B. ein Kundenrückgabeszenario, bei dem dem Kunden nicht nur die Zahlung, sondern auch die eingezogene Steuer erstattet werden muss, und zwar unter Verwendung von Stornierungen und Verwendung von Transaktionsstornierungen in der Debitorenbuchhaltung. Die Studenten lernen auch, wie sie Gelder mit Hilfe von Kostenzuordnung in einer freien Textrechnung verteilen.
+  Erfahren Sie, wie Sie freie Textrechnungen erstellen, Zahlungen von Kunden erhalten und bei der Bank einzahlen. Die Studenten lernen auch, wie man einem Kunden einen überzahlten Betrag oder eine Summe aus anderem Grund erstatten kann z. B. ein Kundenrückgabeszenario, bei dem dem Kunden nicht nur die Zahlung, sondern auch die eingezogene Steuer erstattet werden muss, und zwar unter Verwendung von Stornierungen und Verwendung von Transaktionsstornierungen in der Debitorenbuchhaltung. Die Studenten lernen auch, wie sie Gelder mit Hilfe von Kostenzuordnung  in einer freien Textrechnung verteilen.
 
   #### Lektionen
   - Erstellen freier Textrechnungen und erfassen von Kundenzahlungen
@@ -124,11 +124,11 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Kredit- und Inkassokomponenten konfiguriert
   - Konfigurieren Sie Restantenlisten, Kundenpools, Inkassoagenten und definition von Restantenzeiträumen
   - Interessen einrichten und verwalten
-  - Einrichten und Verwalten von Inkassobriefen
+  - Einrichten und Verwalten von Inkassoschreiben
 
 
   ### Modul 7&#58; Kredit und Inkasso bearbeiten
@@ -140,7 +140,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  In diesem Modul lernten die Schüler&#58;
+  In diesem Modul lernten die Schüler etwas über&#58;
   - Kundenstatements
   - Wie man ein Inkasso verarbeitet
 
