--- a/learn-certs-pr/courses/mb-310t03.yml
+++ b/learn-certs-pr/courses/mb-310t03.yml
@@ -23,7 +23,7 @@ summary: |-
   Unternehmen setzen Dynamics 365 for Finance und Operations zur Steigerung ihrer finanziellen Performance ein, weil es die Rentabilität steigern, die Produktivität ihrer Mitarbeiter optimieren, die Betriebskosten senken, sich schnell an geänderte Anforderungen anpassen und das Asset-Management optimieren kann. In diesem Kurs wird erläutert, wie Sie Budgetierung, Anlagevermögen und zusätzliche Funktionen in Dynamics 365 for Finance and Operations konfigurieren und verwenden.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit Hilfe von gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Grundlegendes Verständnis von ERP- und CRM-Konzepten.
 outlineSection: |-
@@ -35,7 +35,7 @@ outlineSection: |-
   - Verwalten von vordatierten Schecks
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Vordatierte Schecks bearbeitet
@@ -56,7 +56,7 @@ outlineSection: |-
   - Verwenden von Anfragen und Berichten
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Konfigurieren von grundlegende Budgetierungskomponenten
@@ -73,7 +73,7 @@ outlineSection: |-
   - Budgetplanungskomponenten konfigurieren
   - Übungslabor
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Budgetplanungskomponenten konfigurieren
@@ -92,7 +92,7 @@ outlineSection: |-
   - Anlagevermögen anlegen
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Komponenten des Anlagevermögens konfiguriert
@@ -109,7 +109,7 @@ outlineSection: |-
   - Aufgaben des Anlagevermögens ausführen
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Die Anschaffung des Anlagevermögens durchführt
@@ -125,9 +125,9 @@ outlineSection: |-
   - Arbeitsbereich für die Kostenkontrolle
   - Übungslabor
   - Modulübersicht
-  
 
-  In diesem Modul lernten die Schüler&#58;
+
+  In diesem Modul lernten die Schüler etwas über&#58;
   - Arbeitsbereich für die Kostenkontrolle
   - Erstellen eines Kostenrechnungaufstellung mit Hilfe des Installationsassistenten für die Kostenrechnung
 
@@ -139,20 +139,20 @@ outlineSection: |-
   - Kontenabgleichung
   - Finanzperiodenabschluss konfigurieren
   - Regelmäßige Einreichungen vornehmen
-  - Prozesse zur Neubewertung von Fremdwährungen durchführen
+  -Prozesse zur Neubewertung von Fremdwährungen durchführen
   - Finanzkonsolidierungen durchführen
   - Jahresabschluss abwickeln
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - Finanzperiodenabschluss konfigurieren
   - Bankkonten abgleichen
   - Periodische und Jahresabschlüsse durchführt
   - Regelmäßige Einreichungen vornehmen
-  - Konfigurieren und Testen des Lieferanten 1099s-Prozesses
-  - Prozesse zur Neubewertung von Fremdwährungen durchführen
+  - Configure and test Vendor 1099s process
+  -Prozesse zur Neubewertung von Fremdwährungen durchführen
   - Finanzielle Konsolidierungs- und Eliminierungsprozesse durchführen
   - Verwenden Sie Finanzberichte, um Abschlüsse zu erstellen
   - Steuererklärung zum Jahresende abwickeln
@@ -167,7 +167,7 @@ outlineSection: |-
   - Formel-Designer in der elektronischen Berichterstattung
   - Übungslabor
   - Modulübersicht
-  
+
 
   In diesem Modul lernen die Studenten, wie man&#58;
   - ER konfiguriert
@@ -183,15 +183,16 @@ outlineSection: |-
   - Lokalisierungs- und Regulierungsfunktionen
   - Klassifizierung mexikanischer Lokalisierungsmerkmale
   - Verstehen globaler Steuermotoren
-  - Merkmale von Steuerbehörden und Dokumenten für die brasilianische Lokalisierung verstehen Wechsel
+  - Merkmale von Steuerbehörden und Dokumenten für die brasilianische Lokalisierung verstehen
+  Wechsel
   - Elektronische Rechnungen
   - Übungslabore
   - Modulübersicht
-  
 
-  In diesem Modul lernten die Schüler&#58;
+
+  In diesem Modul lernten die Schüler etwas über&#58;
   - Lokalisierungs- und Regulierungsfunktionen
-  - Klassifizierung von Lokalisierungsmerkmalen
+  - Klassifizierung mexikanischer Lokalisierungsmerkmale
   - So wenden Sie den Länder- und Regionenkontext an
   - Konfiguration und Demonstration der Funktionen von Steuerbehörden und Steuerdokumenten für eine brasilianische Lokalisierung
   - Den Wechselprozess testen
@@ -208,7 +209,7 @@ outlineSection: |-
   - Rechnungscodes für freie Textrechnungen konfigurieren
   - Übungslabore
   - Modulübersicht
-  
+
 
   In diesem Modul lernten die Studenten etwas über&#58;
   - Einrichten von Mitteln für den öffentlichen Sektor
@@ -225,6 +226,6 @@ outlineSection: |-
   - Abschließende Bewertung
   - Kurszusammenfassung
   - Umfrage nach dem Kurs
-  
+
 
   Die Kursteilnehmer haben den Kurs abgeschlossen.
