--- a/learn-certs-pr/courses/mb-320t01.yml
+++ b/learn-certs-pr/courses/mb-320t01.yml
@@ -20,7 +20,7 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  Unternehmen verwenden Dynamics 365 for Finance und Operations, um mit verknüpften Abläufen intelligenter zu arbeiten, und dabei die am besten geeigneten Fertigungsprozesse auswählen, Betriebsabläufe verbessern, das Ressourcenmanagement vereinfachen, die Produktlieferung beschleunigen und Qualität und Kundenzufriedenheit steigern. In diesem Kurs wird erläutert, wie man diskret in Dynamics 365 for Finance and Operations konfiguriert und verwendet.
+  Unternehmen verwenden Dynamics 365 for Finance und Operations, um mit verknüpften Abläufen intelligenter zu arbeiten, und dabei die am besten geeigneten Fertigungsprozesse auswählen, Betriebsabläufe verbessern, das Ressourcenmanagement vereinfachen, die Produktlieferung beschleunigen und Qualität und Kundenzufriedenheit steigern. In diesem Kurs wird erläutert, wie man die Prozessverarbeitung in Dynamics 365 for Finance and Operations konfiguriert und verwendet.
 
   #### Zielgruppenprofil
   Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
@@ -37,13 +37,13 @@ outlineSection: |-
   - Kapazitätsplanung verstehen
   - Hauptbuch- und Produktionskontrollmodul
   - Übungslabore
-  Zusammenfassung
+  - Summary
 
 
   In diesem Modul lernten die Schüler etwas über&#58;
   - Separate, schlanke und prozessuale Fertigungsmethoden
   - Einheitliche Fertigung
-  - Konfigurieren der Produktionssteuerung für die einheitliche Fertigung
+  - Konfigurieren der Produktionssteuerung für eine einheitliche Fertigung
   - Kapazitätsplanung
   - Interkonnektivität zwischen dem Hauptbuch und den Produktionssteuerungsmodulen
   - Produktionspools
@@ -57,7 +57,7 @@ outlineSection: |-
   - Den separaten Status des Produktionsprozesses verstehen
   - Verstehen der Stückliste (BOM)
   - Arbeiten mit Stücklisten- und Artikelkonfigurationen
-  - Stücklisten erstellen
+  -Stücklisten erstellen
   - Fertigungsaufträge
   - Übungslabore
   - Modulübersicht
@@ -66,9 +66,9 @@ outlineSection: |-
   In diesem Modul lernten die Schüler etwas über&#58;
   - Separate Fertigungskonzepte
   - Produktionsprozessstatuten
-  - Produktionsstufen
+  -Produktionsstufen
   - Stücklisten
-  - Ressourcen
+  -Ressourcen
   - Routen und Abläufe
 
 
@@ -80,12 +80,12 @@ outlineSection: |-
   - Hauptbuch für die Produktion vorbereiten
   - Konfigurieren der Produktionssteuerungsparameter
   - Kalender und Ressourcen konfigurieren
-  - Vorgänge und Routen konfigurieren
+  - Vorgänge und Routen konfiguriert
   - Übungslabor
   - Modulübersicht
 
 
-  In diesem Modul lernten die Studenten, wie man&#58;
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Bestandsdimensionen in der Produktion konfiguriert
   - Parameter, Fertigungsaufträge und Status konfiguriert
   - Kalender und Ressourcen Konfiguriert
@@ -152,8 +152,8 @@ outlineSection: |-
   - Die für das Verständnis der mit der Produktkonfiguration verbundenen Konzepte und Prozesse wichtige Terminologie
   - Durchgehendes Szenario der Produktkonfiguration
   - Die verschiedenen Bereiche, die den Produktkonfigurationsprozess abdecken
-  - Die Produktkonfigurationsmodell
-  - So erstellen Sie ein Produktkonfigurationsmodell
+  - Verstehen des Produktkonfigurationsmodells
+  - Erstellen eines Produktkonfigurationsmodells
 
 
   ### Modul 8&#58; Abschluss des Kurses
