--- a/learn-certs-pr/courses/mb-320t02.yml
+++ b/learn-certs-pr/courses/mb-320t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Konfigurieren und Verwenden von lehnen Fertigung in Dynamics 365 für Finanzen und Betrieb
+title: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb
 metadata:
-  title: 'Kurs MB-320T02-A: Konfigurieren und Verwenden von lehnen Fertigung in Dynamics 365 für Finanzen und Betrieb'
-  description: 'Kurs MB-320T02-A: Konfigurieren und Verwenden von lehnen Fertigung in Dynamics 365 für Finanzen und Betrieb'
+  title: 'Kurs MB-320T02-A: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb'
+  description: 'Kurs MB-320T02-A: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb'
 uid: course.mb-320t02
 courseNumber: 'MB-320T02-A'
 hoursToComplete: 24
@@ -75,7 +75,7 @@ outlineSection: |-
   Die Teilnehmer haben eine Übersicht über Kanbans und Kanbantypen verstanden und gelernt, wie feste Kanban-Regeln konfiguriert und verarbeitet werden.
 
 
-  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet&#58;
+  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet.
   - Kanbanregeln
   - Herstellung von Kanbans
   - Rücknahme von Kanbans
@@ -95,7 +95,7 @@ outlineSection: |-
   Die Schüler lernten, wie Kanban-Regeln für Ereignisse konfiguriert und verarbeitet werden.
 
 
-  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet&#58;
+  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet.
   - Kanbanregeln
   - Herstellung von Kanbans
   - Rücknahme von Kanbans
@@ -114,7 +114,7 @@ outlineSection: |-
   - Modulübersicht
 
 
-  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet&#58;
+  Die Schüler lernten, wie man diese konfiguriert und damit arbeitet.
   - Kanbanregeln
   - Herstellung von Kanbans
   - Rücknahme von Kanbans
@@ -123,7 +123,7 @@ outlineSection: |-
   - Kanbanmengenberechnung
 
 
-  ### Modul  6&#58; Konfigurieren von aktivitätsbasierter Lohnaufstellung und Produktionsflusskalkulation
+  ### Modul 6&#58; Konfigurieren von aktivitätsbasierter Lohnaufstellung und Produktionsflusskalkulation
   Das Grundprinzip eines Produktionsflusses ändert sich nicht, wenn Aktivitäten über Finance and Operations vergeben werden. Material fließt immer noch zwischen Standorten, Prozessaktivitäten konvertieren Material in Produkte und Transferaktivitäten verschieben Material oder Produkte von einem Standort zu einem anderen. In Dynamics 365 für Finance and Operations gibt es zwei Ansätze für die Vergabe von Unteraufträgen&#58; Fertigungsaufträge und schlanke Produktion. Der erste Ansatz modelliert die Lohnbearbeitungsarbeit als Dienstleistung, die sich auf eine Aktivität eines Produktionsflusses bezieht. Der Kostengruppentyp „Direktes Outsourcing" muss konfiguriert werden, damit die Lohnbearbeitungsdienste nicht Teil einer Stückliste sind. Die Kostenrechnung für Lohnarbeiten ist in Microsoft Dynamics 365 for Finance and Operations vollständig in die neue Fertigungskostenrechnung integriert.
   #### Lektionen
   - Einführung
