--- a/learn-certs-pr/courses/mb-320t03.yml
+++ b/learn-certs-pr/courses/mb-320t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Konfigurieren und Verwenden von Prozess Fertigung in Dynamics 365 für Finanzen und Betrieb
+title: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb
 metadata:
-  title: 'Kurs MB-320T03-A: Konfigurieren und Verwenden von Prozess Fertigung in Dynamics 365 für Finanzen und Betrieb'
-  description: 'Kurs MB-320T03-A: Konfigurieren und Verwenden von Prozess Fertigung in Dynamics 365 für Finanzen und Betrieb'
+  title: 'Kurs MB-320T03-A: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb'
+  description: 'Kurs MB-320T03-A: Konfigurieren und Verwenden von diskreter Fertigung in Dynamics 365 für Finanzen und Betrieb'
 uid: course.mb-320t03
 courseNumber: 'MB-320T03-A'
 hoursToComplete: 24
@@ -22,7 +22,6 @@ exams:
 summary: |-
   Unternehmen verwenden Dynamics 365 for Finance und Operations, um mit verknüpften Abläufen intelligenter zu arbeiten, und dabei die am besten geeigneten Fertigungsprozesse auswählen, Betriebsabläufe verbessern, das Ressourcenmanagement vereinfachen, die Produktlieferung beschleunigen und Qualität und Kundenzufriedenheit steigern.
   In diesem Kurs wird erläutert, wie man die Prozessverarbeitung in Dynamics 365 for Finance and Operations konfiguriert und verwendet.
-
 prerequisitesSection: |-
   Grundlegendes Verständnis von ERP- und CRM-Konzepten.
 outlineSection: |-
