--- a/learn-certs-pr/courses/mb-330t01.yml
+++ b/learn-certs-pr/courses/mb-330t01.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Konfigurieren und Verwenden von Supply Chain Management in Dynamics 365 für Finance and Operations
+title: Konfigurieren und Verwenden von Lieferkettenmanagement in Dynamics 365 für Finanzen und Betrieb
 metadata:
   title: 'Kurs MB-330T01-A: Konfigurieren und Verwenden von Lieferkettenmanagement in Dynamics 365 für Finanzen und Betrieb'
   description: 'Kurs MB-330T01-A: Konfigurieren und Verwenden von Lieferkettenmanagement in Dynamics 365 für Finanzen und Betrieb'
@@ -127,9 +127,9 @@ outlineSection: |-
   In diesem Thema wird erläutert, wie man den Kaufbeschaffungsprozess in Finance and Operations konfiguriert und ausführt.
   #### Lektionen
   - Einführung
-  - Geschäftsszenario Beschaffung und Beschaffung
+  - Procurement and sourcing business scenario
   - Erstellen eines Bestellanforderungs-Arbeitsflusses
-  - Bestellanforderungen anlegt
+  Bestellanforderungen anlegt
   - Erstellen einer Angebotsanfrage
   - Beschaffungsgrundsätze verwenden
   - Übungslabore
@@ -140,7 +140,7 @@ outlineSection: |-
   - Beschaffungs- und Beschaffungsprozesse in einem Geschäftsszenario anwendet
   - Beschaffungsgrundsätze verwenden
   - Lieferanten erstellen und verwalten
-  - Bestellanforderungen anlegt
+  Bestellanforderungen anlegt
   - Eine Angebotsanfrage erstellt
 
 
@@ -176,7 +176,7 @@ outlineSection: |-
   In diesem Modul lernten die Studenten etwas über&#58;
   - Überblick über das Szenario zum Beschaffen und Bezahlen verstehen
   - Verwenden des Bestelländerungsmanagements
-  - Erstellen einer Bestellung
+  Erstellen einer Bestellung
   - Verwenden von Artikelankünften und Ankunftsübersicht
   - Rechnung erstellt und bucht
   - Erstellen eines Rechnungsjournals
