--- a/learn-certs-pr/courses/mb-330t02.yml
+++ b/learn-certs-pr/courses/mb-330t02.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Verwenden von Qualitätsmanagement, firmeninternem Handel und Masterplanung in Dynamics 365 for Finance and Operations
+title: Nutzung von Qualitätsmanagement, unternehmensübergreifendem Handel und Gesamtplanung in Dynamics 365 für Finanzen und Betrieb3332
 metadata:
   title: 'Kurs MB-330T02-A: Nutzung von Qualitätsmanagement, unternehmensübergreifendem Handel und Gesamtplanung in Dynamics 365 für Finanzen und Betrieb'
   description: 'Kurs MB-330T02-A: Nutzung von Qualitätsmanagement, unternehmensübergreifendem Handel und Gesamtplanung in Dynamics 365 für Finanzen und Betrieb'
@@ -56,7 +56,7 @@ outlineSection: |-
   - Modulübersicht
 
 
-  In diesem Modul lernten die Studenten, wie man&#58;
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Produkte für firmeninterne Handelsbeziehungen konfiguriert
   - Firmeninterne Handelsbeziehungen konfigurieren
   - Firmeninterne Vereinbarungen konfigurieren
@@ -80,7 +80,7 @@ outlineSection: |-
   - Modulübersicht
 
 
-  In diesem Modul lernten die Studenten, wie man&#58;
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Masterplanungsrichtlinien definieren
   - Etwas über Angebot- und Nachfrageprognosen erfahren
   - Berechenbare Verzögerungen konfigurieren
