--- a/learn-certs-pr/courses/mb-400t00.yml
+++ b/learn-certs-pr/courses/mb-400t00.yml
@@ -34,7 +34,7 @@ summary: |-
   Ein PowerApps-Entwickler ist für das Entwerfen, Entwickeln, Sichern, Erweitern und Integrieren einer Plattformimplementierung verantwortlich. Der Entwickler implementiert die Komponenten einer Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und kundenspezifische Visualisierungen umfassen. 
   
 prerequisitesSection: |-
-  Vor der Teilnahme an diesem Kurs benötigen die Studenten&#58;
+  Vor Teilnahme an disesem Kurs benötigen die Teilnehmer&#58;
   
   - Ein grundlegendes Verständnis der Power-Plattform.
   - Erfahrung in der Softwareentwicklung für Microsoft-Stack und Visual Studio.
