--- a/learn-certs-pr/courses/mb-500t00.yml
+++ b/learn-certs-pr/courses/mb-500t00.yml
@@ -54,7 +54,7 @@ outlineSection: |-
   
   Entwickeln eines X ++ - Code, Entwickeln eines objektorientiertem Codes, Erweitern der D365-FO-Funktionalität, beschreiben des Testrahmens und der Tools, Durchführen von Komponententests
   
-  #### Labor&#58; Code-Erweiterung und -Entwicklung
+  #### Labor&#58; Metadatenerweiterung und -entwicklung
   
   ### Modul 6&#58; Datenmigration
   
@@ -68,7 +68,7 @@ outlineSection: |-
   
   Implementieren der D365-FO-Funktionalität
   
-  #### Labor&#58; SysExtension Rahmenwerk
+  #### Labor&#58; SysExtension Framework
   
   ### Modul 8&#58; Integration
   
