--- a/learn-certs-pr/courses/mb-900t01.yml
+++ b/learn-certs-pr/courses/mb-900t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Dynamics 365 Grundlagen
+title: Dynamics 365 fundamentals
 metadata:
-  title: 'Kurs MB-900T01-A: Dynamics 365 Fundamentals'
-  description: 'Kurs MB-900T01-A: Dynamics 365 Fundamentals'
+  title: 'Kurs MB-900T01-A: Dynamics 365 fundamentals'
+  description: 'Kurs MB-900T01-A: Dynamics 365 fundamentals'
 uid: course.mb-900t01
 courseNumber: 'MB-900T01-A'
 hoursToComplete: 24
@@ -25,7 +25,6 @@ exams:
 - uid: exam.mb-900
 summary: |-
   Dynamics 365 ist ein vielseitiges Tool für Kundenbindung, einheitlichen Betrieb, Marketing, Einzelhandel und Talent-Management. Dieser Kurs macht Studenten mit den Funktionen und dem geschäftlichen Nutzen von Dynamics 365 vertraut. Der Kurs behandelt Dynamics 365-Anwendungen, die Power Platform, Cloud-Konzepte, das Sicherheitsmodell und Überlegungen zur Lizenzierung.
-
 prerequisitesSection: |-
   Grundlegendes Verständnis der IT-Prinzipien und Interesse an Dynamics 365.
 outlineSection: |-
@@ -61,5 +60,5 @@ outlineSection: |-
   Dieses Modul bietet dem Studenten die Möglichkeit, mit Dynamics 365 zu beginnen, indem er Lizenzoptionen erkundet und Implementierungsunterstützung findet.
   #### Lektionen
   - Einen Partner finden und mit ihm zusammenarbeiten
-  - Lizenzierungsoptionen
+  Lizenzierungsoptionen
   - Vorbereitungen
