--- a/learn-certs-pr/courses/md-100t00.yml
+++ b/learn-certs-pr/courses/md-100t00.yml
@@ -52,7 +52,7 @@ outlineSection: |-
   - Einsatz-Tools
 
 
-  #### Labor&#58; Vor-Ort-Upgrade von Win7 auf Win 10
+  #### Labor&#58;  Vor-Ort-Upgrade von Win7 auf Win 10
 
   #### Labor&#58; Benutzereinstellungen mit USMT migrieren
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
@@ -120,7 +120,7 @@ outlineSection: |-
 
   #### Labor&#58; Fernverwaltung
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Die IP-Netzwerkkonnektivität konfigurieren.
+  - Konfigurieren der IP-Netzwerkkonnektivität.
   - Beschreiben, wie die Namensauflösung funktioniert.
   - Fernzugriff-Technologien wie VPNs beschreiben.
   - Windows für die Fernverwaltung und den Fernzugriff konfigurieren.
@@ -244,7 +244,7 @@ outlineSection: |-
   Dieses Modul wird die Windows 10-Architektur und gängige Umgebungen abdecken. Die Teilnehmer werden in die verschiedenen Tools zur Wartung von Windows eingeführt. In diesem Modul werden auch Methoden zur effektiven Problembehandlung und zur proaktiven Verwaltung und Optimierung von Windows 10 besprochen.
 
   #### Lektionen
-  - Windows-Architektur
+  - Windows Architecture
   - Unterstützungs- und Diagnose-Tools
   - Überwachung und Fehlerbehebung der Computerleistung
 
