--- a/learn-certs-pr/courses/md-100t01.yml
+++ b/learn-certs-pr/courses/md-100t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Installation von Windows 10
+title: Installing Windows 10
 metadata:
-  title: 'Kurs MD-100T01-A: Installation von Windows 10'
-  description: 'Kurs MD-100T01-A: Installation von Windows 10'
+  title: 'Kurs MD-100T01-A: Installing Windows 10'
+  description: 'Kurs MD-100T01-A: Installing Windows 10'
 uid: course.md-100t01
 courseNumber: 'MD-100T01-A'
 hoursToComplete: 24
@@ -25,12 +25,19 @@ products:
 exams:
 - uid: exam.md-100
 summary: |-
-  In diesem Kurs lernen die Teilnehmer, wie sie die Installationsaufgaben in Verbindung mit Windows 10 unterstützen können. Die Teilnehmer werden Fähigkeiten entwickeln, die auch das Erlernen der Installation und Anpassung von Windows 10-Betriebssystemen umfassen. Die Teilnehmer lernen auch das neue Windows-Servicemodell und Methoden kennen, um Windows auf dem neuesten Stand
+  In
+  diesem Kurs lernen die Teilnehmer, wie sie die Installationsaufgaben
+  in Verbindung mit Windows 10 unterstützen können. Die Teilnehmer werden Fähigkeiten entwickeln,
+  die auch das Erlernen der Installation und Anpassung von Windows 10-Betriebssystemen umfassen. Die Teilnehmer lernen auch
+  das neue Windows-Servicemodell und Methoden kennen, um Windows auf dem neuesten Stand
   zu halten. Der Kurs wird mit gemeinsamen Aufgaben nach der Installation abgeschlossen.
 
   #### Zielgruppenprofil
-  Kandidaten für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration, allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
-  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten Diensten vertraut sein.
+  Kandidaten
+  für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration,
+  allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
+  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten
+  Diensten vertraut sein.
 prerequisitesSection: |-
   Die Lernenden sollten diesen Kurs bereits mit den folgenden Fähigkeiten beginnen&#58;
   - Grundlegendes Verständnis von Computernetzwerken und Hardwarekonzepten.
