--- a/learn-certs-pr/courses/md-100t02.yml
+++ b/learn-certs-pr/courses/md-100t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Konfigurieren von Windows 10
+title: Configuring Windows 10
 metadata:
-  title: 'Kurs MD-100T02-A: Konfigurieren von Windows 10'
-  description: 'Kurs MD-100T02-A: Konfigurieren von Windows 10'
+  title: 'Kurs MD-100T02-A: Configuring Windows 10'
+  description: 'Kurs MD-100T02-A: Configuring Windows 10'
 uid: course.md-100t02
 courseNumber: 'MD-100T02-A'
 hoursToComplete: 48
@@ -27,15 +27,25 @@ products:
 exams:
 - uid: exam.md-100
 summary: |-
-  In diesem Kurs lernen die Teilnehmer, wie sie die Konfigurationsaufgaben unterstützen können.
-  in Verbindung mit Windows 10 unterstützen können. Die Teilnehmer werden Fähigkeiten entwickeln, die das Management von Speichern, Dateien, Treibern und Druckern sowie die Konfiguration von Netzwerk Konnektivität für Windows 10 umfassen. In diesem Kurs wird auch die Verwaltung und Bereitstellung von Anwendungen behandelt.
+  In
+  diesem Kurs lernen die Teilnehmer, wie sie die Konfigurationsaufgaben unterstützen können.
+  in Verbindung mit Windows 10 unterstützen können. Die Teilnehmer werden Fähigkeiten entwickeln, die das Management von
+  Speichern, Dateien, Treibern und Druckern sowie die Konfiguration von Netzwerk
+  Konnektivität für Windows 10 umfassen. In diesem Kurs wird auch die Verwaltung und Bereitstellung
+  von Anwendungen behandelt.
 
   #### Zielgruppenprofil
-  Kandidaten für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration, allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
-  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten Diensten vertraut sein.
+  Kandidaten
+  für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration,
+  allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
+  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten
+  Diensten vertraut sein.
 prerequisitesSection: |-
-  Kandidaten für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration, allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
-  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten Diensten vertraut sein.
+  Kandidaten
+  für diese Prüfung sind IT-Spezialisten, die die Installation und Konfiguration,
+  allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen.
+  Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten
+  Diensten vertraut sein.
 outlineSection: |-
   ### Modul 1&#58; Konfigurieren von Peripheriegeräten und Treibern
   Dieses Modul deckt die Gerätekonfiguration ab. Die Teilnehmer lernen, wie Gerätetreiber funktionieren und wie man sie installiert. Die Teilnehmer werden auch in die Verwaltung und Konfiguration von Hardware-Peripheriegeräten wie z.B. Druckern eingeführt.
