--- a/learn-certs-pr/courses/md-100t03.yml
+++ b/learn-certs-pr/courses/md-100t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Schutz von Windows 10
+title: Protecting Windows 10
 metadata:
-  title: 'Kurs MD-100T03-A: Schutz von Windows 10'
-  description: 'Kurs MD-100T03-A: Schutz von Windows 10'
+  title: 'Kurs MD-100T03-A: Protecting Windows 10'
+  description: 'Kurs MD-100T03-A: Protecting Windows 10'
 uid: course.md-100t03
 courseNumber: 'MD-100T03-A'
 hoursToComplete: 24
@@ -31,7 +31,7 @@ summary: |-
   #### Zielgruppenprofil
   Die Prüfung wird von IT-Fachleuten abgelegt, die Installation, Konfiguration, allgemeine lokale Verwaltung und Wartung der Windows 10-Kerndienste durchführen. Die Kandidaten können auch mit Unternehmensszenarien und Cloud-integrierten Diensten vertraut sein.
 prerequisitesSection: |-
-  Die Lernenden sollten diesen Kurs bereits mit den folgenden Fähigkeiten beginnen&#58;
+  Die Lernenden sollten diesen Kurs bereits mit den folgenden Fähigkeiten beginnen:
   - Grundlegendes Verständnis von Computernetzwerken und Hardwarekonzepten.
   - Grundlegendes Verständnis von OS- und Anwendungskonzepten.
   - Erfahrung im Umgang mit dem Windows-Betriebssystem.
@@ -90,7 +90,7 @@ outlineSection: |-
 
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Gemeinsame Sicherheitsbedrohungen identifizieren
+  - Gemeinsame Sicherheitsbedrohungen erkennen
   - Beschreibung der Methoden, mit denen Sie diese häufigen Sicherheitsbedrohungen abschwächen können.
   - Beschreibung der verschiedenen Methoden der Verschlüsselung.
   - Beschreibung, wie die Windows-Firewall das Gerät schützen kann.
