--- a/learn-certs-pr/courses/md-100t04.yml
+++ b/learn-certs-pr/courses/md-100t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Wartung von Windows 10
+title: Maintaining Windows 10
 metadata:
-  title: 'Kurs MD-100T04-A: Wartung von Windows 10'
-  description: 'Kurs MD-100T04-A: Wartung von Windows 10'
+  title: 'Kurs MD-100T04-A: Maintaining Windows 10'
+  description: 'Kurs MD-100T04-A: Maintaining Windows 10'
 uid: course.md-100t04
 courseNumber: 'MD-100T04-A'
 hoursToComplete: 24
