--- a/learn-certs-pr/courses/md-101t01.yml
+++ b/learn-certs-pr/courses/md-101t01.yml
@@ -31,7 +31,10 @@ summary: |-
   #### Zielgruppenprofil
   Der Modern Desktop Administrator (MDA) stellt Geräte und Client-Anwendungen in einer Unternehmensumgebung bereit, konfiguriert, sichert, verwaltet und überwacht sie. Zu den Aufgaben gehört die Verwaltung von Identität, Zugriff, Richtlinien, Updates und Anwendungen. Der MDA arbeitet mit dem M365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwickeln und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht. Die (MDA) muss mit M365-Arbeitslasten vertraut sein und über umfassende Fähigkeiten und Erfahrungen mit der Bereitstellung, Konfiguration und Wartung von Windows 10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management.
 prerequisitesSection: |-
-  Der moderne Desktop-Administrator (MDA) muss mit M365-Workloads vertraut sein und über umfassende Kenntnisse und Erfahrungen bei der Bereitstellung, Konfiguration und Wartung von Windows 10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services
+  Der
+  moderne Desktop-Administrator (MDA) muss mit M365-Workloads vertraut sein und
+  über umfassende Kenntnisse und Erfahrungen bei der Bereitstellung, Konfiguration und Wartung von Windows
+  10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services
   und nicht auf Technologien für das lokale Management.
 outlineSection: |-
   ### Modul 1&#58; Planung einer Strategie für die Betriebssystemeinführung
@@ -71,7 +74,7 @@ outlineSection: |-
   - Verstehen der verschiedenen Einsatzmethoden
   - Verstehen, welche Szenarien für lokale und Cloud-basierte Lösungen verwendet werden können
   - Bereitstellen und Migrieren von Desktops auf Windows 10
-  - Planen und Konfigurieren von Windows Update-Richtlinien
+  - Planen und Konfigurieren von Windows Update-Richtlinien.
 
 
   ### Modul 3&#58; Verwaltung von Updates für Windows 10
