--- a/learn-certs-pr/courses/md-101t03.yml
+++ b/learn-certs-pr/courses/md-101t03.yml
@@ -32,8 +32,11 @@ summary: |-
   #### Zielgruppenprofil
   Der Modern Desktop Administrator (MDA) stellt Geräte und Client-Anwendungen in einer Unternehmensumgebung bereit, konfiguriert, sichert, verwaltet und überwacht sie. Zu den Aufgaben gehört die Verwaltung von Identität, Zugriff, Richtlinien, Updates und Anwendungen. Der MDA arbeitet mit dem M365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwickeln und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht. Die MDA muss mit M365-Arbeitslasten vertraut sein und über umfassende Fähigkeiten und Erfahrungen der Bereitstellung, Konfiguration und Wartung von Windows 10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management.
 prerequisitesSection: |-
-  Der moderne Desktop-Administrator MDA muss mit M365-Workloads vertraut sein und über umfassende Kenntnisse und Erfahrungen bei der Bereitstellung, Konfiguration und Wartung von Windows
-  10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management.
+  Der
+  moderne Desktop-Administrator MDA muss mit M365-Workloads vertraut sein und
+  über umfassende Kenntnisse und Erfahrungen bei der Bereitstellung, Konfiguration und Wartung von Windows
+  10 und Nicht-Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services
+  und nicht auf Technologien für das lokale Management.
 outlineSection: |-
   ### Modul 1&#58; Verwaltung der Authentifizierung in Azure AD
   In diesem Modul werden die Studenten in das Konzept des Directory in the Cloud mit Azure Active Directory (Azure AD) eingeführt. Die Teilnehmer lernen die Ähnlichkeiten und Unterschiede zwischen Azure AD und Active Directory DS kennen und erfahren, wie man zwischen beiden synchronisiert. Die Teilnehmer lernen das Identitätsmanagement in Azure AD kennen und erfahren etwas über den Identitätsschutz mit Windows Hello for Business sowie über den Azure AD Identitätsschutz und die Multi-Faktor-Authentifizierung. Das Modul schließt mit dem sicheren Zugriff auf Unternehmensressourcen ab und stellt Konzepte wie Always On VPN und Remote-Konnektivität in Windows 10 vor.
@@ -55,7 +58,7 @@ outlineSection: |-
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreibung der Fähigkeiten von Azure AD.
   - Verwaltung von Benutzern mit Azure AD mit Active Directory DS.
-  - Implementieren von Windows Hello for Business.
+  - Windows Hello for Business implementieren.
   - Geräte mit Azure AD verbinden.
   - Beschreibung der Methoden zur Ermöglichung des Zugriffs von externen Netzwerken.
 
