--- a/learn-certs-pr/courses/ms-100t00.yml
+++ b/learn-certs-pr/courses/ms-100t00.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Microsoft 365 Identität und Services
+title: Microsoft 365 Identity and Services
 metadata:
   title: 'Kurs MS-100T00-A: Microsoft 365 Identity and Services'
   description: 'Kurs MS-100T00-A: Microsoft 365 Identity and Services'
@@ -53,7 +53,7 @@ outlineSection: |-
   #### Lektionen
   - Planen Ihres Microsoft 365-Erlebnisses
   - Konfigurieren Ihres Microsoft 365 Erlebnisses
-  - Verwalten von Benutzerkonten und Lizenzen in Microsoft 365
+  - Benutzerkonten und Lizenzen in Microsoft 365
   - Verwalten von Sicherheitsgruppen in Microsoft 365
   - Implementieren Ihrer Domaindienste
   - Nutzung von FastTrack- und Partnerdiensten
@@ -62,7 +62,7 @@ outlineSection: |-
   ### Modul 3&#58; Übung 1 - Konfigurieren Ihres Microsoft 365-Mandanten
 
   #### Labor&#58; Konfigurieren Ihres Microsoft 365-Mandanten
-  - Übung 1&#58; Erstellen eines Microsoft 365-Mandanten
+  - Übung 1&#58; Erstellen eines Microsoft 365-Testmieters
 
 
   ### Modul 4&#58; Verwalten Ihres Microsoft 365-Mandanten
@@ -102,7 +102,7 @@ outlineSection: |-
   - Office Kunden-Konnektivität zu Office 365 konfigurieren
 
 
-  ### Modul 9&#58;Verwalten von Office 365 ProPlus-Bereitstellungen
+  ### Modul 9&#58; Verwalten von Office 365 ProPlus-Bereitstellungen
   #### Lektionen
   - Verwalten von benutzergesteuerten Kunden-Installationen
   - Verwalten von zentralisierten Office 365 ProPlus-Bereitstellungen
@@ -122,7 +122,7 @@ outlineSection: |-
   #### Lektionen
   - Einführung in die Identitätssynchronisierung
   - Planen von Azure AD Connect
-  - Azure AD Connect Implementieren
+  Azure AD Connect-Implementieren
   - Verwalten synchronisierter Identitäten
   - Passwortverwaltung in Microsoft 365
 
