--- a/learn-certs-pr/courses/ms-100t01.yml
+++ b/learn-certs-pr/courses/ms-100t01.yml
@@ -37,7 +37,7 @@ prerequisitesSection: |-
 outlineSection: |-
   ### Modul 1&#58; Verschieben Ihrer Organisation zu Office 365
   #### Lektionen
-  - Online-Austausch
+  - Exchange Online
   - SharePoint Online
   - Teams
   - Zusätzliche Ressourcen
