--- a/learn-certs-pr/courses/ms-100t03.yml
+++ b/learn-certs-pr/courses/ms-100t03.yml
@@ -46,7 +46,7 @@ outlineSection: |-
   ### Modul 1&#58; Verwalten von Benutzersicherheitsgruppen und -lizenzen für Cloud-Identitäten
   #### Lektionen
   - Benutzerkonten und Lizenzen in Microsoft 365
-  - Administratorrollen und Sicherheitsgruppen in Microsoft 365
+  - Verwalten von Administratorrollen und Sicherheitsgruppen in Microsoft 365
   - Passwortverwaltung in Microsoft 365
 
 
@@ -60,7 +60,7 @@ outlineSection: |-
   #### Lektionen
   - Einführung in die Identitätssynchronisierung
   - Planen von Azure AD Connect
-  - Azure AD Connect Implementieren
+  - Azure AD Connect-Implementieren
   - Verwalten synchronisierter Identitäten
 
 
