--- a/learn-certs-pr/courses/ms-101t01.yml
+++ b/learn-certs-pr/courses/ms-101t01.yml
@@ -17,7 +17,7 @@ skillsGained:
 - skill: Anhänge und sichere Links verwalten
 - skill: Implementieren von Microsoft 365 Threat Intelligence
 - skill: Verwenden des Microsoft 365 Security Dashboards
-- skill: Konfigurieren fortgeschrittener Bedrohungsanalysen.
+- skill: Konfigurieren fortgeschrittener Bedrohungsanalysen
 - skill: Implementieren von Sicherheitsmaßnahmen für Cloud-Anwendungen
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
