--- a/learn-certs-pr/courses/ms-101t02.yml
+++ b/learn-certs-pr/courses/ms-101t02.yml
@@ -8,7 +8,7 @@ courseNumber: 'MS-101T02-A'
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: 'Beschreiben der Datenverwaltung in Microsoft 365: Archivierung, Aufbewahrung, Verwaltung von Informationsrechten, sichere Mehrzweck-Internet-Mail-Erweiterung (S / MIME), Office 365-Nachrichtenverschlüsselung und Prävention vor Datenverlust'
+- skill: 'Beschreiben der Datenverwaltung in Microsoft 365. Kompetenz: Verstehen von Data Governance in Microsoft 365, einschließlich: Archivierung, Aufbewahrung, Verwaltung von Informationsrechten, sichere Mehrzweck-Internet-Mail-Erweiterung (S / MIME), Office 365-Nachrichtenverschlüsselung und Verhinderung von Datenverlust'
 - skill: In-Place Dokumentenverwaltung in SharePoint
 - skill: Archivierung und Aufbewahrung in Exchange implementieren
 - skill: Erstelle Aufbewahrungsrichtlinien im Sicherheits- and Compliance-Center
