--- a/learn-certs-pr/courses/ms-200t01.yml
+++ b/learn-certs-pr/courses/ms-200t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Grundlegendes zur modernen Messaging-Infrastruktur
+title: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)
 metadata:
-  title: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur'
-  description: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur'
+  title: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)'
+  description: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)'
 uid: course.ms-200t01
 courseNumber: 'MS-200T01-A'
 hoursToComplete: 48
@@ -32,11 +32,16 @@ summary: |-
   In diesem Kurs lernen die Teilnehmer die Architektur der modernen Nachrichteninfrastruktur mit Exchange Server und Exchange Online kennen und erfahren, wie Messaging in verschiedenen Szenarien und Organisationen bereitgestellt wird. Sie werden durch den ersten Bereitstellungsprozess geführt und in die Messaging-Verwaltungstools eingeführt. Die Kursteilnehmer lernen, wie verschiedene Empfängertypen erstellt und verwaltet werden und wie Exchange Server-Postfachdatenbanken erstellt und verwaltet werden, die als Speicherorte für alle Nachrichtendaten dienen. Abschließend erhalten sie eine Einführung in die Organisationseinstellungen der Nachrichten-Infrastruktur, z. B. zum Verwalten der Authentifizierung für Ihre Nachrichtenumgebung, zum Konfigurieren von Kontingenten für Benutzer in der Organisation und zum Konfigurieren der Organisationsfreigabe für den Verbund.
 
   #### Zielgruppenprofil
-  Der Nachrichtenadministrator stellt bereit, konfiguriert, verwaltet und behebt Probleme für Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Nachrichten-
-  ordner in lokalen und Cloud-Unternehmensumgebungen. Zuständigkeiten Zu den Aufgaben gehören die Verwaltung der Nachrichtenreinhaltung, der Nachrichteninfrastruktur sowie der Hybridkonfiguration-und Migration. Der Nachrichten-Administrator implementiert und verwaltet auch Desaster Wiederherstellung, hohe Verfügbarkeit und Kundenzugriff. Implementieren einer sicheren Hybrid-
+  Der Nachrichtenadministrator stellt bereit, konfiguriert, verwaltet und
+  behebt Probleme für Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Nachrichten-
+  ordner in lokalen und Cloud-Unternehmensumgebungen. Zuständigkeiten
+  Zu den Aufgaben gehören die Verwaltung der Nachrichtenreinhaltung, der Nachrichteninfrastruktur sowie der Hybridkonfiguration-
+  und Migration. Der Nachrichten-Administrator implementiert und verwaltet auch Desaster
+  Wiederherstellung, hohe Verfügbarkeit und Kundenzugriff. Implementieren einer sicheren Hybrid-
   Topologie, der den Geschäftsanforderungen einer modernen Organisation entspricht, der Nachrichten-Administrator,
   muss mit dem Sicherheitsadministrator und dem Microsoft 365 Unternehmens-Administrator zusammenarbeiten.
-  Der Nachrichten-Administrator sollte über Grundkenntnisse in Bezug auf Authentifizierungstypen, Lizenzierung und Integration in Microsoft 365-Anwendungen verfügen.
+  Der Nachrichten-Administrator sollte über Grundkenntnisse in Bezug auf Authentifizierungstypen,
+  Lizenzierung und Integration in Microsoft 365-Anwendungen verfügen.
 prerequisitesSection: |-
   - Kompetentes Verständnis von DNS.
   - Grundlegendes Verständnis von Nachrichtenübermittlung in Exchange Server oder Exchange Online.
