--- a/learn-certs-pr/courses/ms-200t03.yml
+++ b/learn-certs-pr/courses/ms-200t03.yml
@@ -35,11 +35,16 @@ summary: |-
   In diesem Kurs werden die Teilnehmer in die einzelnen Lösungen eingeführt und lernen, wann sie die eine oder die andere Lösung verwenden müssen, wie eine Bereitstellung geplant wird und wie die eigentliche Implementierung durchgeführt wird.
 
   #### Zielgruppenprofil
-  Der Nachrichtenadministrator stellt bereit, konfiguriert, verwaltet und behebt Probleme für Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Nachrichten-
-  ordner in lokalen und Cloud-Unternehmensumgebungen. Zuständigkeiten Zu den Aufgaben gehören die Verwaltung der Nachrichtenreinhaltung, der Nachrichteninfrastruktur sowie der Hybridkonfiguration-und Migration. Der Nachrichten-Administrator implementiert und verwaltet auch Desaster Wiederherstellung, hohe Verfügbarkeit und Kundenzugriff. Implementieren einer sicheren Hybrid-
+  Der Nachrichtenadministrator stellt bereit, konfiguriert, verwaltet und
+  behebt Probleme für Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Nachrichten-
+  ordner in lokalen und Cloud-Unternehmensumgebungen. Zuständigkeiten
+  Zu den Aufgaben gehören die Verwaltung der Nachrichtenreinhaltung, der Nachrichteninfrastruktur sowie der Hybridkonfiguration-
+  und Migration. Der Nachrichten-Administrator implementiert und verwaltet auch Desaster
+  Wiederherstellung, hohe Verfügbarkeit und Kundenzugriff. Implementieren einer sicheren Hybrid-
   Topologie, der den Geschäftsanforderungen einer modernen Organisation entspricht, der Nachrichten-Administrator,
   muss mit dem Sicherheitsadministrator und dem Microsoft 365 Unternehmens-Administrator zusammenarbeiten.
-  Der Nachrichten-Administrator sollte über Grundkenntnisse in Bezug auf Authentifizierungstypen, Lizenzierung und Integration in Microsoft 365-Anwendungen verfügen.
+  Der Nachrichten-Administrator sollte über Grundkenntnisse in Bezug auf Authentifizierungstypen,
+  Lizenzierung und Integration in Microsoft 365-Anwendungen verfügen.
 prerequisitesSection: |-
   - Kompetentes Verständnis von DNS.
   - Grundlegendes Verständnis von Nachrichtenübermittlung in Exchange Server oder Exchange Online.
