--- a/learn-certs-pr/courses/ms-201t02.yml
+++ b/learn-certs-pr/courses/ms-201t02.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Verwalten von Nachrichten-Sicherheit, Reinhaltung und Compliance
+title: Verwalten der Sicherheit, Hygiene und Einhaltung von Messaging-Richtlinien
 metadata:
   title: 'Kurs MS-201T02-A: Verwalten der Sicherheit, Hygiene und Einhaltung von Messaging-Richtlinien'
   description: 'Kurs MS-201T02-A: Verwalten der Sicherheit, Hygiene und Einhaltung von Messaging-Richtlinien'
