--- a/learn-certs-pr/courses/ms-300t03.yml
+++ b/learn-certs-pr/courses/ms-300t03.yml
@@ -34,7 +34,7 @@ summary: |-
 
   Dieser Kurs richtet sich an IT-Experten, die Microsoft-Teams in ihrer Organisation verwalten und bereitstellen. 
   
-  Dies ist der dritte von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-300&#58; Bereitstellen von Microsoft 365 Teamwork.
+  Dies ist der erste von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-300&#58; Bereitstellen von Microsoft 365 Teamwork.
 
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Die Rolle ist für das Konfigurieren, Bereitstellen und Verwalten von Office 365- und Azure-Arbeitspensum verantwortlich, bei denen eine effiziente und effektive Zusammenarbeit und Übernahme im Vordergrund steht. Sie verwalten Apps, Dienste und die unterstützende Infrastruktur zur Erfüllung der Geschäftsanforderungen. Der Administrator ist sich der Produkte und Dienstleistungen bewusst und kann sie unterscheiden, verwaltet jedoch möglicherweise nicht jedes Produkt oder jede Dienstleistung direkt.
@@ -90,7 +90,7 @@ outlineSection: |-
 
   #### Lektionen
   - Datenschutz und Governance
-  - Sicherheit und Compliance
+  Sicherheit und Compliance
   - Management und Berichterstattung
 
 
