--- a/learn-certs-pr/courses/ms-300t04.yml
+++ b/learn-certs-pr/courses/ms-300t04.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Aktivieren von Office 365 Arbeitsabläufen für die Zusammenarbeit
+title: Enabling Office 365 Workloads for Collaboration
 metadata:
   title: 'Kurs MS-300T04-A: Enabling Office 365 Workloads for Collaboration'
   description: 'Kurs MS-300T04-A: Enabling Office 365 Workloads for Collaboration'
@@ -35,7 +35,7 @@ summary: |-
   
   Dieser Kurs richtet sich an IT-Experten, die die Teamwork-Infrastruktur in ihrer Organisation bereitstellen und verwalten. 
   
-  Dies ist der zuletzt von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-300&#58; Bereitstellen von Microsoft 365 Teamwork.
+  Dies ist der erste von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-300&#58; Bereitstellen von Microsoft 365 Teamwork.
 
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Die Rolle ist für das Konfigurieren, Bereitstellen und Verwalten von Office 365- und Azure-Arbeitspensum verantwortlich, bei denen eine effiziente und effektive Zusammenarbeit und Übernahme im Vordergrund steht. Sie verwalten Apps, Dienste und die unterstützende Infrastruktur zur Erfüllung der Geschäftsanforderungen. Der Administrator ist sich der Produkte und Dienstleistungen bewusst und kann sie unterscheiden, verwaltet jedoch möglicherweise nicht jedes Produkt oder jede Dienstleistung direkt.
@@ -80,14 +80,14 @@ outlineSection: |-
   ### Modul 3&#58; Verwalten des Arbeitsaufwandes für die Office 365-Kollaboration
   In Office 365 gibt es viele Apps und Funktionen, die Sie für die Kollaboration verwenden können. Sie müssen wissen, wie Sie diese Apps und Funktionen konfigurieren, um die Anforderungen Ihres Unternehmens zu erfüllen. In diesem Modul erfahren Sie mehr über die Verwaltung von Office 365-Gruppen, Power BI, Microsoft Stream, Yammers, Flow und PowerApps.
   #### Lektionen
-  - Verwalten des Arbeitsaufwandes für die Office 365-Kollaboration
+  -Verwalten des Arbeitsaufwandes für die Office 365-Kollaboration
   - Verwalten von Stream-Funktionen
   - Verwalten von Yammer-Funktionen
   - Verwalten von Flow- und PowerApps-Funktionen
 
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Den Arbeitsaufwand für die Office 365-Kollaboration verwenden
+  -Den Arbeitsaufwand für die Office 365-Kollaboration verwenden
   - Stream-Funktionen verwalten
   - Yammer-Funktionen verwalten
   - Flow- und PowerApps-Funktionen verwalten
