--- a/learn-certs-pr/courses/ms-301t01.yml
+++ b/learn-certs-pr/courses/ms-301t01.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Implementierung der SharePoint 2019-Infrastruktur
+title: Implementing SharePoint 2019 Infrastructure
 metadata:
   title: 'Kurs MS-301T01-A: Implementing SharePoint 2019 Infrastructure'
   description: 'Kurs MS-301T01-A: Implementing SharePoint 2019 Infrastructure'
@@ -83,7 +83,7 @@ outlineSection: |-
   - Erklären der Konzepte hinter der Verbundidentität
 
 
-  ### Modul  3&#58; SharePoint-Inhaltsverwaltung
+  ### Modul 3&#58; SharePoint-Inhaltsverwaltung
   In diesem Modul geht es um SharePoint Content-Management. Die Inhaltsstruktur in SharePoint wird hier erläutert. Außerdem werden Details zur Autorisierung und zum Inhaltszugriff in SharePoint bereitgestellt.
 
   #### Lektionen
@@ -100,6 +100,6 @@ outlineSection: |-
   - Beschreiben der Verwaltung von SharePoint-Gruppen in SharePoint 2019
 
 
-  ### Modul  4&#58; Abschluss des Kurses
+  ### Modul 4&#58; Abschluss des Kurses
 
   #### Labor &#58; web applications erstellen und konfigurieren
