--- a/learn-certs-pr/courses/ms-500t01.yml
+++ b/learn-certs-pr/courses/ms-500t01.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Verwalten von Microsoft 365-Identität und -Zugriff
+title: Managing Microsoft 365 Identity and Access
 metadata:
   title: 'Kurs MS-500T01-A: Managing Microsoft 365 Identity and Access'
   description: 'Kurs MS-500T01-A: Managing Microsoft 365 Identity and Access'
@@ -32,7 +32,7 @@ summary: |-
   Schützen Sie sich mit der Identitäts- und Zugriffsverwaltung vor der Gefährdung von Anmeldeinformationen. In diesem Kurs lernen Sie, wie Sie den Benutzerzugriff auf die Ressourcen Ihrer Organisation sichern. Dieser Kurs behandelt insbesondere den Schutz von Benutzerkennwörtern, die mehrstufige Authentifizierung, das Aktivieren von Azure Identitätsschutz, das Konfigurieren von Active Directory-Verbunddiensten, das Einrichten und Verwenden von Azure AD Connect sowie die Einführung in Zwangsberechtigung. Sie erfahren auch, wie Sie den externen Zugriff auf Ihr Microsoft 365-System verwalten können.
 
   #### Zielgruppenprofil
-  Dieser Kurs richtet sich an die Microsoft 365-Sicherheitsadministratorrolle. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
+  Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
   
   Diese Rolle sichert proaktiv Microsoft 365-Unternehmensumgebungen. Zu den Aufgaben gehören das Reagieren auf Bedrohungen, das Implementieren, Verwalten und Überwachen von Sicherheits- und Compliance-Lösungen für die Microsoft 365-Umgebung. Sie reagieren auf Vorfälle, Untersuchungen und die Durchsetzung von Data Governance. 
   
@@ -77,7 +77,7 @@ outlineSection: |-
   #### Lektionen
   - Einführung in die Identitätssynchronisierung
   - Planen von Azure AD Connect
-  - Azure AD Connect Implementieren
+  - Azure AD Connect implementieren
   - Verwalten synchronisierter Identitäten
 
 
@@ -116,9 +116,9 @@ outlineSection: |-
   In diesem Modul wird der bedingte Zugriff für Microsoft 365 beschrieben und wie er zum Steuern des Zugriffs auf Ressourcen in Ihrer Organisation verwendet werden kann. Das Modul erklärt auch die rollenbasierte Zugriffskontrolle (RBAC) und Lösungen für den externen Zugriff.
   #### Lektionen
   Zugangskontrolle
-  - Verwalten des Gerätezugriffs
+  - Verwalten des Zugriffs auf mobile Geräte
   - Rollenbasierte Zugriffskontrolle (RBAC)
-  - Lösungen für den externen Zugriff
+  - Entwerfen von Lösungen für den externen Zugriff
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben Sie das Konzept des bedingten Zugriffs
