--- a/learn-certs-pr/courses/ms-500t03.yml
+++ b/learn-certs-pr/courses/ms-500t03.yml
@@ -31,7 +31,7 @@ summary: |-
   Informationsschutz ist das Konzept der Lokalisierung und Klassifizierung von Daten, wo immer sie sich befinden. In diesem Kurs erfahren Sie mehr über Informationsschutztechnologien, mit denen Sie Ihre Microsoft 365-Umgebung schützen können. In diesem Kurs werden speziell mit Informationsrechten verwaltete Inhalte, Nachrichtenverschlüsselung sowie Beschriftungen, Richtlinien und Regeln behandelt, die die Verhinderung von Datenverlust und den Schutz von Informationen unterstützen. Zuletzt wird die Bereitstellung der Microsoft-Cloud-App-Sicherheit erläutert.
 
   #### Zielgruppenprofil
-  Dieser Kurs richtet sich an die Microsoft 365-Sicherheitsadministratorrolle. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
+  Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
   
   Diese Rolle sichert proaktiv Microsoft 365-Unternehmensumgebungen. Zu den Aufgaben gehören das Reagieren auf Bedrohungen, das Implementieren, Verwalten und Überwachen von Sicherheits- und Compliance-Lösungen für die Microsoft 365-Umgebung. Sie reagieren auf Vorfälle, Untersuchungen und die Durchsetzung von Data Governance.
 
@@ -49,7 +49,7 @@ outlineSection: |-
   In diesem Modul wird die Verwaltung von Informationsrechten in Exchange und SharePoint erläutert. Es werden auch Verschlüsselungstechnologien zum Sichern von Nachrichten beschrieben. Das Modul führt in die Implementierung von Azure Informationsschutz und Windows Informationsschutz ein.
   #### Lektionen
   Informationsrechts-Management
-  - Sichere Mehrzweck-Internet-Mail-Erweiterung
+  - Einführung in die sichere Mehrzweck-Internet-Mail-Erweiterung
   - Office 365-Nachrichtenverschlüsselung
   - Azure Informationsschutz
   - erweiterten Informationsschutzes
@@ -103,7 +103,7 @@ outlineSection: |-
   #### Lektionen
   - Erklärung der Sicherheit von Cloud-Anwendungen
   - Verwenden von Sicherheitsinformationen für Cloud-Anwendungen
-  - Verwenden der Office 365 Cloud-App-Sicherheit
+  - Office 365 Cloud App Security
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben der Cloud-App-Sicherheit.
