--- a/learn-certs-pr/courses/ms-900t01.yml
+++ b/learn-certs-pr/courses/ms-900t01.yml
@@ -39,7 +39,9 @@ summary: |-
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an IT-Experten, die Clouddienste in ihrem Unternehmen bereitstellen und verwalten möchten oder einfach nur grundlegende Kenntnisse über Cloud-Grundlagen erwerben möchten. Dies umfasst die Überlegungen und Vorteile der allgemeinen Einführung von Clouddiensten und des speziellen SaaS-Cloud-Modells (Software-as-a-Service) mit einem allgemeinen Schwerpunkt auf Microsoft 365-Clouddienstangeboten.
 prerequisitesSection: |-
-  Dieser Kurs ist konzipiert für IT-Experten, die Cloud-Dienste in ihrem Unternehmen bereitstellen und verwalten möchten. Die Studenten sollten den folgenden Hintergrund haben&#58;
+  Dieser Kurs ist konzipiert
+  für IT-Experten, die Cloud-Dienste in ihrem Unternehmen bereitstellen und
+  verwalten möchten. Die Studenten sollten den folgenden Hintergrund haben:
   - Allgemeine IT-Kenntnisse oder allgemeine Erfahrung in einer IT-Umgebung
   - Allgemeine Erfahrung (auf Verkaufsebene) mit entsprechenden lokalen Microsoft-Produkten wie Exchange Server, SharePoint, Office Professional, AD RMS und anderen
   - Erfahrung im Umgang mit geschäftlichen / rechtlichen / Sicherheitsanforderungen für die IT
@@ -65,7 +67,7 @@ outlineSection: |-
 
   #### Labor&#58; Aktivieren und Konfigurieren eines Microsoft 365-Mandanten
   - Übung 1&#58; Aktivieren und Konfigurieren eines Microsoft 365-Mandanten
-  - Übung 2&#58; Entdecken Sie das Microsoft 365-Benutzer- und Administrationsportal
+  - Übung 2&#58; Entdecken desvMicrosoft 365-Benutzer- und Administrationsportals
   - Übung 3&#58; Konfiguration neuer Benutzer- und Gruppenkonten
 
 
@@ -73,7 +75,7 @@ outlineSection: |-
   #### Lektionen
   - Organisatorische Sicherheitsgrundlagen
   - Sicherheitsfunktionen in Microsoft 365
-  - Identitäts- und Zugrffsmanagement
+  Identitäts- und Zugrffsmanagement
   - Geräte- und Datenschutz in Microsoft 365
   - Compliance in Microsoft 365
 
