--- a/learn-certs-pr/courses/az-301t01.yml
+++ b/learn-certs-pr/courses/az-301t01.yml
@@ -8,13 +8,13 @@ courseNumber: 'AZ-301T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Existierende Lösungen mit externen Identitätsprovidern durch Azure AD B2B oder B2C integrieren
+- skill: bestehende Lösungen mit externen Identitätsprovidern durch AD B2B oder B2C integrieren
 - skill: Hybride Identitätslösungen entwerfen
-- skill: Festlegen, wann advanced features von Azure AD wie Managed Service Identify, MFA und Privileged Identity Management verwendet werden.
+- skill: estlegen, wann advanced feature von Azure AD wie zum Beispiel Managed Service Identity, MFA und Privileged Identity Management verwendet werden
 - skill: Anwendungsgeheimnise mit Key Vault sichern
-- skill: Anwendungsdaten durch SQL Datenbank und Azure-storage Funktionen sichern.
+- skill: Anwendungsdaten durch SQL&#58; Datenbank und Azure-storage Funktionen sichern.
 - skill: Verschiedenen APIs die in Kognitive Dienstleistungen verfügbar sind detaillieren
-- skill: Erkennen, wann Face API Speech API oder Language Understanding (LUIS) Dienste genutzt werden sollen.
+- skill: Erkennen, wann Face API Speech API oder Language Understanding (LUIS) Dienste genutzt werden sollen
 - skill: Die Beziehung hwischen Bot-Framework und Azure-bot-service beschreiben
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -61,7 +61,7 @@ outlineSection: |-
   - bestehende Lösungen mit externen Identitätsprovidern durch AD B2B oder B2C integrieren
   - hybride Identitätslösungen entwerfen
   - festlegen, wann advanced feature von Azure AD wie zum Beispiel Managed Service Identity, MFA und Privileged Identity Management verwendet werden
-  - Anwendungsgeheimnisse durch Key Vault sichern
+  - Anwendungsgeheimnise mit Key Vault sichern
   - Anwendungsdaten durch SQL&#58; Datenbank und Azure-storage Funktionen sichern
 
 
@@ -70,5 +70,5 @@ outlineSection: |-
 
   #### Labor&#58; Service Instanzen als Komponenten der gesamten Azur Lösung
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - die verschiedenen APIs die in Kognitive Dienstleistungen vorhanden sind detaillieren
-  - erkennen, wann Face API, Speech API oder Language Understanding (LUIS) Dienstleistungen zu verwenden sind.
+  - Verschiedenen APIs die in Kognitive Dienstleistungen verfügbar sind detaillieren
+  - Erkennen, wann Face API Speech API oder Language Understanding (LUIS) Dienste genutzt werden sollen
