--- a/learn-certs-pr/courses/az-400t04.yml
+++ b/learn-certs-pr/courses/az-400t04.yml
@@ -50,12 +50,12 @@ outlineSection: |-
 
   #### Labor&#58; Updating packages
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Artefakt Managementtools und Praktiken empfehlen
-  - common packages zur aktivierung von sharing und wiederverwendung abstrahieren
-  - Codebase, um Code Dependencies zu identifizieren, die in Packages konvertiert werden können, inspizieren
-  - das Identifizieren und Empfehlen von standardisierten Package-Typen und Versionen für alle Aspekte der Lösung
-  - das Neuberechnen von bestehenden Build Pipelines zur Implementierung der Versionsstrategie, die Packages veröffentlicht
-  - das Verwalten von Sicherheit und Compliance
+  - Empfehlen der Artefakt Managementtools und Praktiken
+  - Abstrahieren von common packages zur aktivierung von sharing und wiederverwendung
+  - Inspizieren von Codebase, um Code Dependencies zu identifizieren, die in Packages konvertiert werden können
+  - Identifizieren und Empfehlen von standardisierten Package-Typen und Versionen für alle Aspekte der Lösung
+  - Neuberechnen von bestehenden Build Pipelines zur Implementierung der Versionsstrategie, die Packages veröffentlicht
+  - Verwalten von Sicherheit und Compliance
 
 
   ### Modul 2&#58; Verwalten von Sicherheit und Compliance
@@ -66,6 +66,6 @@ outlineSection: |-
   - Lizenzen und Verletztlichkeitsscans integrieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - das Prüfen von Open Source Software-Paketen auf Sicherheit und Lizenzen für Übereinstimmung mit Firmenstandards
-  - Build Piplenine für Zugriff auf Package Sicherheit und Licence Rating konfigurieren
-  - das Konfigurieren von sicherem Zugriff auf Package-Feeds
+  - Prüfen von Open Source Software-Paketen auf Sicherheit und Lizenzen für Übereinstimmung mit Firmenstandards
+  - Konfigurieren einer Build Pipeline um zugriff auf Package Sicherheit und Lizenz Rating zu haben
+  - Konfigurieren von sicherem Zugriff auf Package-Feeds
