--- a/learn-certs-pr/courses/mb-330t03.yml
+++ b/learn-certs-pr/courses/mb-330t03.yml
@@ -104,7 +104,7 @@ outlineSection: |-
   #### Lektionen
   - Einführung
   - Planung und Konfiguration des Transportmanagements
-  - Verfahren
+  Verfahren
   - Routing- und Transportflüsse
   - Transportmittel und Frachtmanagement
   - Übungslabore
