--- a/learn-certs-pr/courses/ms-301t02.yml
+++ b/learn-certs-pr/courses/ms-301t02.yml
@@ -39,7 +39,7 @@ summary: |-
   
   Dieser Kurs richtet sich an IT-Experten, die die Teamwork-Infrastruktur in ihrer Organisation bereitstellen und verwalten.
   
-  Dies ist der zweite von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-301&#58; Bereitstellen des SharePoint Server Hybrid.
+  Dies ist der erste von vier Kursen für den Teamwork-Administrator. Diese Kurse helfen bei der Vorbereitung auf die Prüfung MS-301&#58; Bereitstellen des SharePoint Server Hybrid.
 
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Die Rolle ist für das Konfigurieren, Bereitstellen und Verwalten von Office 365- und Azure-Arbeitspensum verantwortlich, bei denen eine effiziente und effektive Zusammenarbeit und Übernahme im Vordergrund steht. Sie verwalten Apps, Dienste und die unterstützende Infrastruktur zur Erfüllung der Geschäftsanforderungen. Der Administrator ist sich der Produkte und Dienstleistungen bewusst und kann sie unterscheiden, verwaltet jedoch möglicherweise nicht jedes Produkt oder jede Dienstleistung direkt.
@@ -65,7 +65,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Die wichtigsten Komponenten eines BDC-Modells erläutern.
-  - Beschreiben der allgemeinen Architektur von BCS.
+  - Die allgemeine Architektur von BCS beschreiben.
   - Bereitstellen einer BDC-Service-Anwendungsinstanz.
   - Secure Store Service-Anwendungen planen und konfigurieren.
   - Den Zweck des Secure Store-Dienstes erläutern.
