--- a/learn-certs-pr/courses/ms-500t02.yml
+++ b/learn-certs-pr/courses/ms-500t02.yml
@@ -32,19 +32,19 @@ summary: |-
   Der Bedrohungsschutz verhindert schädliche Angriffe durch integrierte und automatisierte Sicherheit. In diesem Kurs erfahren Sie mehr über Informationsschutztechnologien, mit denen Sie Ihre Microsoft 365-Umgebung schützen können. Insbesondere lernen Sie Bedrohungsvektoren und deren Sicherheitslösungen von Microsoft kennen. Sie erhalten Informationen zu Secure Score, Exchange Online-Schutz, Azure Advanced Threat Protection und Windows Defender Advanced Threat Protection sowie zur Verwendung von Microsoft 365 Threat Intelligence. Außerdem wird das Sichern mobiler Geräte und Anwendungen erläutert. Ziel dieses Kurses ist es, Sie bei der Konfiguration Ihrer Microsoft 365-Bereitstellung zu unterstützen, um die gewünschte Sicherheitslage zu erreichen.
 
   #### Zielgruppenprofil
-  Dieser Kurs richtet sich an die Microsoft 365-Sicherheitsadministratorrolle. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
+  Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
   
   Diese Rolle sichert proaktiv Microsoft 365-Unternehmensumgebungen. Zu den Aufgaben gehören das Reagieren auf Bedrohungen, das Implementieren, Verwalten und Überwachen von Sicherheits- und Compliance-Lösungen für die Microsoft 365-Umgebung. Sie reagieren auf Vorfälle, Untersuchungen und die Durchsetzung von Data Governance.
   
   Der Microsoft 365-Sicherheitsadministrator ist mit Microsoft 365-Arbeitsabläufen vertraut und verfügt über umfassende Kenntnisse und Erfahrungen in den Bereichen Identitätsschutz, Informationsschutz, Bedrohungsschutz, Sicherheitsverwaltung und Datenverwaltung. Die Funktion legt den Schwerpunkt auf Microsoft 365 Umgebungen und umfasst hybride Umgebungen.
 prerequisitesSection: |-
   Die Lernenden sollten diesen Kurs bereits mit den folgenden Fähigkeiten beginnen&#58;
-  - Grundlegendes konzeptionelles Verständnis von Microsoft Azure.
-  - Erfahrung mit Windows 10-Geräten.
-  - Erfahrung mit Office 365.
-  - Grundlegendes Verständnis von Autorisierung und Authentifizierung.
-  - Grundlegendes Verständnis von Computernetzwerken.
-  - Grundkenntnisse in der Verwaltung mobiler Geräte.
+  - Grundlegendes konzeptionelles Verständnis von Microsoft Azure
+  - Erfahrung mit Windows 10-Geräten
+  - Erfahrung mit Office 365
+  - Grundlegendes Verständnis von Autorisierung und Authentifizierung
+  - Grundlegendes Verständnis von Computernetzwerken
+  - Grundkenntnisse in der Verwaltung mobiler Geräte
 outlineSection: |-
   ### Modul 1&#58; Sicherheit bei Microsoft 365
   In diesem Modul werden zunächst die verschiedenen Bedrohungen durch Cyberangriffe erläutert.  Anschließend werden Sie mit den Microsoft-Lösungen vertraut gemacht, um diese Bedrohungen zu vereiteln.  Das Modul endet mit einer Erläuterung von Microsoft Secure Score und der Verwendung dieses Moduls zur Bewertung und Meldung der Sicherheitslage Ihres Unternehmens.
@@ -65,8 +65,8 @@ outlineSection: |-
   ### Modul 2&#58; Erweiterter Bedrohungsschutz
   In diesem Modul werden die verschiedenen Bedrohungsschutztechnologien und -dienste erläutert, die in Microsoft 365 verfügbar sind. Insbesondere deckt das Modul den Nachrichtenschutz von Exchange Online Protection, Azure Advanced Threat Protection und Windows Defender Advanced Threat Protection ab.
   #### Lektionen
-  - Exchange Online-Schutz
-  Office 365 Advanced Threat Protection
+  - Exchange Online Protection
+  - Office 365 Advanced Threat Protection
   - Verwalten sicherer Anhänge
   - Verwalten sicherer Links
   - Azure Advanced Threat Protection
@@ -89,7 +89,7 @@ outlineSection: |-
   ### Modul 3&#58; Bedrohungsanalyse
   In diesem Modul wird die Microsoft Bedrohungsanalyse erläutert, mit deren Hilfe Sie Cyber-Bedrohungen bewerten und angehen können. Sie erfahren, wie man das Sicherheits- Dashboard im Microsoft 365 Sicherheits- und Compliance-Center verwendet. Außerdem wird die erweiterte Bedrohungsanalyse in Microsoft erläutert und konfiguriert.
   #### Lektionen
-  - Microsoft 365 Bedrohungsanalyse
+  - Microsoft 365 Threat Intelligence
   - Verwenden des Sicherheits-Dashboards
   - Konfigurieren der erweiterten Bedrohungsanalyse
 
@@ -109,8 +109,8 @@ outlineSection: |-
   ### Modul 4&#58; Mobilität
   In diesem Modul dreht sich alles um die Sicherung mobiler Geräte und Anwendungen. Die Studenten lernen etwas über die Verwaltung mobiler Geräte und deren Funktionsweise mit Intune. Sie erfahren auch, wie Intune und Azure AD zum Sichern mobiler Anwendungen verwendet werden können.
   #### Lektionen
+  - Planung für das Mobile App Management
   - Verwaltung mobiler Anwendungen planen
-  -Verwaltung mobiler Anwendungen planen
   - Mobilgerätemanagement bereitstellen
   - Geräte für das Mobilgerätemanagement registrieren
 
