--- a/learn-certs-pr/courses/ms-500t04.yml
+++ b/learn-certs-pr/courses/ms-500t04.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Course
-title: Verwalten der integrierten Microsoft 365-Kompatibilität
+title: Administering Microsoft 365 Built-in Compliance
 metadata:
   title: 'Kurs MS-500T04-A: Administering Microsoft 365 Built-in Compliance'
   description: 'Kurs MS-500T04-A: Administering Microsoft 365 Built-in Compliance'
@@ -31,7 +31,7 @@ summary: |-
   Interne Richtlinien und externe Anforderungen für die Aufbewahrung und Untersuchung von Daten können für Ihr Unternehmen erforderlich sein. In diesem Kurs lernen Sie die Archivierung und Aufbewahrung in Microsoft 365 sowie die Datenverwaltung und das Durchführen von Inhaltssuchen und -untersuchungen. In diesem Kurs werden insbesondere die Richtlinien und Tags für die Datenaufbewahrung, die direkte Datensatzverwaltung für SharePoint, die E-Mail-Aufbewahrung und die Durchführung von Inhaltssuchen behandelt, die eDiscovery-Untersuchungen unterstützen. Der Kurs hilft Ihrer Organisation auch bei der Vorbereitung auf die globale Datenschutzverordnung (GDPR).
 
   #### Zielgruppenprofil
-  Dieser Kurs richtet sich an die Microsoft 365-Sicherheitsadministratorrolle. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
+  Dieser Kurs richtet sich an Microsoft 365-Teamwork-Administratoren. Diese Rolle arbeitet mit dem Microsoft 365 Enterprise Administrator, Geschäftsinteressenten und anderen Workload-Administratoren zusammen, um Sicherheitsstrategien zu planen und umzusetzen und um sicherzustellen, dass die Lösungen den Richtlinien und Vorschriften des Unternehmens entsprechen. 
   
   Diese Rolle sichert proaktiv Microsoft 365-Unternehmensumgebungen. Zu den Aufgaben gehören das Reagieren auf Bedrohungen, das Implementieren, Verwalten und Überwachen von Sicherheits- und Compliance-Lösungen für die Microsoft 365-Umgebung. Sie reagieren auf Vorfälle, Untersuchungen und die Durchsetzung von Data Governance. 
   
@@ -89,7 +89,7 @@ outlineSection: |-
   - Arbeiten Sie mit Aufbewahrungstags in Postfächern
   - Beschreiben von Aufbewahrungsrichtlinien mit E-Mail-Nachrichten und E-Mail-Ordnern
   - Erläutern, wie das Aufbewahrungsalter von Elementen berechnet wird.
-  - Reparieren von Aufbewahrungsrichtlinien, die nicht wie erwartet ausgeführt werden.
+  - Reparieren  von Aufbewahrungsrichtlinien, die nicht wie erwartet ausgeführt werden.
 
 
   ### Modul 3&#58; Suche und Ermittlungen verwalten
